--- a/src/main/resources/assets/mubble/lang/de_de.json
+++ b/src/main/resources/assets/mubble/lang/de_de.json
@@ -5,7 +5,7 @@
     "item.mubbleGroup.mubble_costumes": "Mubble-Kostüme",
 
     //block.mubbleS
-    "block.mubble.vanadium_block.mubble": "Vanadium-block.mubble",
+    "block.mubble.vanadium_block": "Vanadium-block",
     "block.mubble.vanadium_ore": "Vanadium-Erz",
     "block.mubble.red_bricks": "Rote Ziegelsteine",
     "block.mubble.red_brick_stairs": "Rote Ziegeltreppe",
@@ -21,14 +21,14 @@
     "block.mubble.carbonite_wall": "Carbonite-Mauer",
     "block.mubble.polished_carbonite": "Polierter Carbonite",
     "block.mubble.polished_carbonite_stairs": "Polierte Carbonite-Treppe",
-    "block.mubble.footblock.mubble": "Fußblock.mubble",
-    "block.mubble.white_cloud_block.mubble": "Weißer Wolkenblock.mubble",
-    "block.mubble.light_gray_cloud_block.mubble": "Hellgrauer Wolkenblock.mubble",
-    "block.mubble.gray_cloud_block.mubble": "Grauer Wolkenblock.mubble",
-    "block.mubble.black_cloud_block.mubble": "Schwarzer Wolkenblock.mubble",
+    "block.mubble.footblock": "Fußblock",
+    "block.mubble.white_cloud_block": "Weißer Wolkenblock",
+    "block.mubble.light_gray_cloud_block": "Hellgrauer Wolkenblock",
+    "block.mubble.gray_cloud_block": "Grauer Wolkenblock",
+    "block.mubble.black_cloud_block": "Schwarzer Wolkenblock",
     "block.mubble.tomato": "Tomaten",
     "block.mubble.salad": "Salat",
-    "block.mubble.cheese_block.mubble": "Käseblock.mubble",
+    "block.mubble.cheese_block": "Käseblock",
     "block.mubble.unstable_stone": "Instabiler Stein",
     "block.mubble.ultimatum_portal": "Ultimatum-Portal",
     "block.mubble.blue_balloon": "Blauer Luftballon",
@@ -48,14 +48,14 @@
     "block.mubble.gray_balloon": "Grauer Luftballon",
     "block.mubble.black_balloon": "Schwarzer Luftballon",
 
-    "block.mubble.question_block.mubble": "?-block.mubble",
-    "block.mubble.empty_block.mubble": "Leerer block.mubble",
-    "block.mubble.rotating_block.mubble": "Rotierender block.mubble",
-    "block.mubble.light_block.mubble": "Leuchtender block.mubble",
-    "block.mubble.brick_block.mubble": "Ziegelstein-block.mubble",
-    "block.mubble.golden_brick_block.mubble": "Goldener Ziegelstein-block.mubble",
-    "block.mubble.note_block.mubble": "Notenblock.mubble",
-    "block.mubble.super_note_block.mubble": "Super Notenblock.mubble",
+    "block.mubble.question_block": "?-block",
+    "block.mubble.empty_block": "Leerer block",
+    "block.mubble.rotating_block": "Rotierender block",
+    "block.mubble.light_block": "Leuchtender block",
+    "block.mubble.brick_block": "Ziegelstein-block",
+    "block.mubble.golden_brick_block": "Goldener Ziegelstein-block",
+    "block.mubble.note_block": "Notenblock",
+    "block.mubble.super_note_block": "Super Notenblock",
     "block.mubble.fire_flower": "Feuerblume",
     "block.mubble.ice_flower": "Eisblume",
     "block.mubble.boomerang_flower": "Bumerangblume",
@@ -75,37 +75,37 @@
     "block.mubble.light_gray_mushroom": "Hellgrauer Pilz",
     "block.mubble.gray_mushroom": "Grauer Pilz",
     "block.mubble.black_mushroom": "Schwarzer Pilz",
-    "block.mubble.blue_mushroom_block.mubble": "Blauer Pilzblock.mubble",
-    "block.mubble.light_blue_mushroom_block.mubble": "Hellblauer Pilzblock.mubble",
-    "block.mubble.cyan_mushroom_block.mubble": "Türkiser Pilzblock.mubble",
-    "block.mubble.green_mushroom_block.mubble": "Grüner Pilzblock.mubble",
-    "block.mubble.lime_mushroom_block.mubble": "Hellgrüner Pilzblock.mubble",
-    "block.mubble.yellow_mushroom_block.mubble": "Gelber Pilzblock.mubble",
-    "block.mubble.orange_mushroom_block.mubble": "Orangener Pilzblock.mubble",
-    "block.mubble.pink_mushroom_block.mubble": "Pinker Pilzblock.mubble",
-    "block.mubble.magenta_mushroom_block.mubble": "Magenta Pilzblock.mubble",
-    "block.mubble.purple_mushroom_block.mubble": "Violetter Pilzblock.mubble",
-    "block.mubble.white_mushroom_block.mubble": "Weißer Pilzblock.mubble",
-    "block.mubble.light_gray_mushroom_block.mubble": "Hellgrauer Pilzblock.mubble",
-    "block.mubble.gray_mushroom_block.mubble": "Grauer Pilzblock.mubble",
-    "block.mubble.black_mushroom_block.mubble": "Schwarzer Pilzblock.mubble",
+    "block.mubble.blue_mushroom_block": "Blauer Pilzblock",
+    "block.mubble.light_blue_mushroom_block": "Hellblauer Pilzblock",
+    "block.mubble.cyan_mushroom_block": "Türkiser Pilzblock",
+    "block.mubble.green_mushroom_block": "Grüner Pilzblock",
+    "block.mubble.lime_mushroom_block": "Hellgrüner Pilzblock",
+    "block.mubble.yellow_mushroom_block": "Gelber Pilzblock",
+    "block.mubble.orange_mushroom_block": "Orangener Pilzblock",
+    "block.mubble.pink_mushroom_block": "Pinker Pilzblock",
+    "block.mubble.magenta_mushroom_block": "Magenta Pilzblock",
+    "block.mubble.purple_mushroom_block": "Violetter Pilzblock",
+    "block.mubble.white_mushroom_block": "Weißer Pilzblock",
+    "block.mubble.light_gray_mushroom_block": "Hellgrauer Pilzblock",
+    "block.mubble.gray_mushroom_block": "Grauer Pilzblock",
+    "block.mubble.black_mushroom_block": "Schwarzer Pilzblock",
 
-    "block.mubble.blue_tetris_block.mubble": "Blauer Tetrisblock.mubble",
-    "block.mubble.light_blue_tetris_block.mubble": "Hellblauer Tetrisblock.mubble",
-    "block.mubble.cyan_tetris_block.mubble": "Türkiser Tetrisblock.mubble",
-    "block.mubble.green_tetris_block.mubble": "Grüner Tetrisblock.mubble",
-    "block.mubble.lime_tetris_block.mubble": "Hellgrüner Tetrisblock.mubble",
-    "block.mubble.yellow_tetris_block.mubble": "Gelber Tetrisblock.mubble",
-    "block.mubble.orange_tetris_block.mubble": "Orangener Tetrisblock.mubble",
-    "block.mubble.red_tetris_block.mubble": "Roter Tetrisblock.mubble",
-    "block.mubble.pink_tetris_block.mubble": "Pinker Tetrisblock.mubble",
-    "block.mubble.magenta_tetris_block.mubble": "Magenta Tetrisblock.mubble",
-    "block.mubble.purple_tetris_block.mubble": "Violetter Tetrisblock.mubble",
-    "block.mubble.brown_tetris_block.mubble": "Brauner Tetrisblock.mubble",
-    "block.mubble.white_tetris_block.mubble": "Weißer Tetrisblock.mubble",
-    "block.mubble.light_gray_tetris_block.mubble": "Hellgrauer Tetrisblock.mubble",
-    "block.mubble.gray_tetris_block.mubble": "Grauer Tetrisblock.mubble",
-    "block.mubble.black_tetris_block.mubble": "Schwarzer Tetrisblock.mubble",
+    "block.mubble.blue_tetris_block": "Blauer Tetrisblock",
+    "block.mubble.light_blue_tetris_block": "Hellblauer Tetrisblock",
+    "block.mubble.cyan_tetris_block": "Türkiser Tetrisblock",
+    "block.mubble.green_tetris_block": "Grüner Tetrisblock",
+    "block.mubble.lime_tetris_block": "Hellgrüner Tetrisblock",
+    "block.mubble.yellow_tetris_block": "Gelber Tetrisblock",
+    "block.mubble.orange_tetris_block": "Orangener Tetrisblock",
+    "block.mubble.red_tetris_block": "Roter Tetrisblock",
+    "block.mubble.pink_tetris_block": "Pinker Tetrisblock",
+    "block.mubble.magenta_tetris_block": "Magenta Tetrisblock",
+    "block.mubble.purple_tetris_block": "Violetter Tetrisblock",
+    "block.mubble.brown_tetris_block": "Brauner Tetrisblock",
+    "block.mubble.white_tetris_block": "Weißer Tetrisblock",
+    "block.mubble.light_gray_tetris_block": "Hellgrauer Tetrisblock",
+    "block.mubble.gray_tetris_block": "Grauer Tetrisblock",
+    "block.mubble.black_tetris_block": "Schwarzer Tetrisblock",
     "block.mubble.tetris_glass": "Tetris-Glas",
     "block.mubble.japanese_tetris_cushion": "Japanischer Tetris-Kissen",
     "block.mubble.rainbow_tetris_scaffolding": "Regenbogen-Tetris-Gerüst",
@@ -132,14 +132,14 @@
     "block.mubble.gray_candy_cane_pillar": "Graue Zuckerstangensäule",
     "block.mubble.black_candy_cane_pillar": "Schwarze Zuckerstangensäule",
 
-    "block.mubble.green_hill_grass_block.mubble": "Grüner Hügelgrassblock.mubble",
+    "block.mubble.green_hill_grass_block": "Grüner Hügelgrassblock",
     "block.mubble.green_hill_dirt": "Grüne Hügelerde",
     "block.mubble.marble_zone_stone": "Marble-Zonenstein",
     "block.mubble.yellow_studiopolis_clapper": "Gelbe Studiopolis-Filmklappe",
     "block.mubble.blue_studiopolis_clapper": "Blaue Studiopolis-Filmklappe",
     "block.mubble.spring": "Feder",
 
-    "block.mubble.scarlet_grass_block.mubble": "Scharlachroter Grassblock.mubble",
+    "block.mubble.scarlet_grass_block": "Scharlachroter Grassblock",
     "block.mubble.scarlet_grass": "Scharlachrotes Grass",
     "block.mubble.scarlet_mushroom": "Scharlachroter Pilz",
     "block.mubble.scarlet_orchid": "Scharlachrote Orchidee",
@@ -163,10 +163,10 @@
     "block.mubble.point_puyo": "Punkte-Puyo",
     "block.mubble.hard_puyo": "Harter Puyo",
     "block.mubble.iron_puyo": "Eisen-Puyo",
-    "block.mubble.puyo_block.mubble": "Puyo-block.mubble",
+    "block.mubble.puyo_block": "Puyo-block",
 
-    "block.mubble.rewind_block.mubble": "Rückspulblock.mubble",
-    "block.mubble.koretato_block.mubble": "Koretato-block.mubble",
+    "block.mubble.rewind_block": "Rückspulblock",
+    "block.mubble.koretato_block": "Koretato-block",
 
     //item.mubbleS
     "item.mubble.vanadium": "Vanadium",
