--- a/src/main/resources/assets/mubble/lang/en_us.json
+++ b/src/main/resources/assets/mubble/lang/en_us.json
@@ -5,7 +5,7 @@
     "item.mubbleGroup.mubble_costumes": "Mubble Costumes",
 
     //block.mubbleS
-    "block.mubble.vanadium_block.mubble": "block.mubble of Vanadium",
+    "block.mubble.vanadium_block": "block.mubble of Vanadium",
     "block.mubble.vanadium_ore": "Vanadium Ore",
     "block.mubble.red_bricks": "Red Bricks",
     "block.mubble.red_brick_stairs": "Red Brick Stairs",
@@ -21,14 +21,14 @@
     "block.mubble.carbonite_wall": "Carbonite Wall",
     "block.mubble.polished_carbonite": "Polished Carbonite",
     "block.mubble.polished_carbonite_stairs": "Polished Carbonite Stairs",
-    "block.mubble.footblock.mubble": "Footblock.mubble",
-    "block.mubble.white_cloud_block.mubble": "White Cloud block.mubble",
-    "block.mubble.light_gray_cloud_block.mubble": "Light Gray Cloud block.mubble",
-    "block.mubble.gray_cloud_block.mubble": "Gray Cloud block.mubble",
-    "block.mubble.black_cloud_block.mubble": "Black Cloud block.mubble",
+    "block.mubble.footblock": "Footblock",
+    "block.mubble.white_cloud_block": "White Cloud block",
+    "block.mubble.light_gray_cloud_block": "Light Gray Cloud block",
+    "block.mubble.gray_cloud_block": "Gray Cloud block",
+    "block.mubble.black_cloud_block": "Black Cloud block",
     "block.mubble.tomato": "Tomatoes",
     "block.mubble.salad": "Salad",
-    "block.mubble.cheese_block.mubble": "Cheese block.mubble",
+    "block.mubble.cheese_block": "Cheese block",
     "block.mubble.unstable_stone": "Unstable Stone",
     "block.mubble.ultimatum_portal": "Ultimatum Portal",
     "block.mubble.blue_balloon": "Blue Balloon",
@@ -48,14 +48,14 @@
     "block.mubble.gray_balloon": "Gray Balloon",
     "block.mubble.black_balloon": "Black Balloon",
 
-    "block.mubble.question_block.mubble": "? block.mubble",
-    "block.mubble.empty_block.mubble": "Empty block.mubble",
-    "block.mubble.rotating_block.mubble": "Rotating block.mubble",
-    "block.mubble.light_block.mubble": "Light block.mubble",
-    "block.mubble.brick_block.mubble": "Brick block.mubble",
-    "block.mubble.golden_brick_block.mubble": "Golden Brick block.mubble",
-    "block.mubble.note_block.mubble": "Note block.mubble",
-    "block.mubble.super_note_block.mubble": "Super Note block.mubble",
+    "block.mubble.question_block": "? block",
+    "block.mubble.empty_block": "Empty block",
+    "block.mubble.rotating_block": "Rotating block",
+    "block.mubble.light_block": "Light block",
+    "block.mubble.brick_block": "Brick block",
+    "block.mubble.golden_brick_block": "Golden Brick block",
+    "block.mubble.note_block": "Note block",
+    "block.mubble.super_note_block": "Super Note block",
     "block.mubble.fire_flower": "Fire Flower",
     "block.mubble.ice_flower": "Ice Flower",
     "block.mubble.boomerang_flower": "Boomerang Flower",
@@ -75,37 +75,37 @@
     "block.mubble.light_gray_mushroom": "Light Gray Mushroom",
     "block.mubble.gray_mushroom": "Gray Mushroom",
     "block.mubble.black_mushroom": "Black Mushroom",
-    "block.mubble.blue_mushroom_block.mubble": "Blue Mushroom block.mubble",
-    "block.mubble.light_blue_mushroom_block.mubble": "Light Blue Mushroom block.mubble",
-    "block.mubble.cyan_mushroom_block.mubble": "Cyan Mushroom block.mubble",
-    "block.mubble.green_mushroom_block.mubble": "Green Mushroom block.mubble",
-    "block.mubble.lime_mushroom_block.mubble": "Lime Mushroom block.mubble",
-    "block.mubble.yellow_mushroom_block.mubble": "Yellow Mushroom block.mubble",
-    "block.mubble.orange_mushroom_block.mubble": "Orange Mushroom block.mubble",
-    "block.mubble.pink_mushroom_block.mubble": "Pink Mushroom block.mubble",
-    "block.mubble.magenta_mushroom_block.mubble": "Magenta Mushroom block.mubble",
-    "block.mubble.purple_mushroom_block.mubble": "Purple Mushroom block.mubble",
-    "block.mubble.white_mushroom_block.mubble": "White Mushroom block.mubble",
-    "block.mubble.light_gray_mushroom_block.mubble": "Light Gray Mushroom block.mubble",
-    "block.mubble.gray_mushroom_block.mubble": "Gray Mushroom block.mubble",
-    "block.mubble.black_mushroom_block.mubble": "Black Mushroom block.mubble",
+    "block.mubble.blue_mushroom_block": "Blue Mushroom block",
+    "block.mubble.light_blue_mushroom_block": "Light Blue Mushroom block",
+    "block.mubble.cyan_mushroom_block": "Cyan Mushroom block",
+    "block.mubble.green_mushroom_block": "Green Mushroom block",
+    "block.mubble.lime_mushroom_block": "Lime Mushroom block",
+    "block.mubble.yellow_mushroom_block": "Yellow Mushroom block",
+    "block.mubble.orange_mushroom_block": "Orange Mushroom block",
+    "block.mubble.pink_mushroom_block": "Pink Mushroom block",
+    "block.mubble.magenta_mushroom_block": "Magenta Mushroom block",
+    "block.mubble.purple_mushroom_block": "Purple Mushroom block",
+    "block.mubble.white_mushroom_block": "White Mushroom block",
+    "block.mubble.light_gray_mushroom_block": "Light Gray Mushroom block",
+    "block.mubble.gray_mushroom_block": "Gray Mushroom block",
+    "block.mubble.black_mushroom_block": "Black Mushroom block",
 
-    "block.mubble.blue_tetris_block.mubble": "Blue Tetris block.mubble",
-    "block.mubble.light_blue_tetris_block.mubble": "Light Blue Tetris block.mubble",
-    "block.mubble.cyan_tetris_block.mubble": "Cyan Tetris block.mubble",
-    "block.mubble.green_tetris_block.mubble": "Green Tetris block.mubble",
-    "block.mubble.lime_tetris_block.mubble": "Lime Tetris block.mubble",
-    "block.mubble.yellow_tetris_block.mubble": "Yellow Tetris block.mubble",
-    "block.mubble.orange_tetris_block.mubble": "Orange Tetris block.mubble",
-    "block.mubble.red_tetris_block.mubble": "Red Tetris block.mubble",
-    "block.mubble.pink_tetris_block.mubble": "Pink Tetris block.mubble",
-    "block.mubble.magenta_tetris_block.mubble": "Magenta Tetris block.mubble",
-    "block.mubble.purple_tetris_block.mubble": "Purple Tetris block.mubble",
-    "block.mubble.brown_tetris_block.mubble": "Brown Tetris block.mubble",
-    "block.mubble.white_tetris_block.mubble": "White Tetris block.mubble",
-    "block.mubble.light_gray_tetris_block.mubble": "Light Gray Tetris block.mubble",
-    "block.mubble.gray_tetris_block.mubble": "Gray Tetris block.mubble",
-    "block.mubble.black_tetris_block.mubble": "Black Tetris block.mubble",
+    "block.mubble.blue_tetris_block": "Blue Tetris block",
+    "block.mubble.light_blue_tetris_block": "Light Blue Tetris block",
+    "block.mubble.cyan_tetris_block": "Cyan Tetris block",
+    "block.mubble.green_tetris_block": "Green Tetris block",
+    "block.mubble.lime_tetris_block": "Lime Tetris block",
+    "block.mubble.yellow_tetris_block": "Yellow Tetris block",
+    "block.mubble.orange_tetris_block": "Orange Tetris block",
+    "block.mubble.red_tetris_block": "Red Tetris block",
+    "block.mubble.pink_tetris_block": "Pink Tetris block",
+    "block.mubble.magenta_tetris_block": "Magenta Tetris block",
+    "block.mubble.purple_tetris_block": "Purple Tetris block",
+    "block.mubble.brown_tetris_block": "Brown Tetris block",
+    "block.mubble.white_tetris_block": "White Tetris block",
+    "block.mubble.light_gray_tetris_block": "Light Gray Tetris block",
+    "block.mubble.gray_tetris_block": "Gray Tetris block",
+    "block.mubble.black_tetris_block": "Black Tetris block",
     "block.mubble.tetris_glass": "Tetris Glass",
     "block.mubble.japanese_tetris_cushion": "Japanese Tetris Cushion",
     "block.mubble.rainbow_tetris_scaffolding": "Rainbow Tetris Scaffolding",
@@ -132,14 +132,14 @@
     "block.mubble.gray_candy_cane_pillar": "Gray Candy Cane Pillar",
     "block.mubble.black_candy_cane_pillar": "Black Candy Cane Pillar",
 
-    "block.mubble.green_hill_grass_block.mubble": "Green Hill Grass block.mubble",
+    "block.mubble.green_hill_grass_block": "Green Hill Grass block",
     "block.mubble.green_hill_dirt": "Green Hill Dirt",
     "block.mubble.marble_zone_stone": "Marble Zone Stone",
     "block.mubble.yellow_studiopolis_clapper": "Yellow Studiopolis Clapper",
     "block.mubble.blue_studiopolis_clapper": "Blue Studiopolis Clapper",
     "block.mubble.spring": "Spring",
 
-    "block.mubble.scarlet_grass_block.mubble": "Scarlet Grass block.mubble",
+    "block.mubble.scarlet_grass_block": "Scarlet Grass block",
     "block.mubble.scarlet_grass": "Scarlet Grass",
     "block.mubble.scarlet_mushroom": "Scarlet Mushroom",
     "block.mubble.scarlet_orchid": "Scarlet Orchid",
@@ -163,10 +163,10 @@
     "block.mubble.point_puyo": "Point Puyo",
     "block.mubble.hard_puyo": "Hard Puyo",
     "block.mubble.iron_puyo": "Iron Puyo",
-    "block.mubble.puyo_block.mubble": "Puyo block.mubble",
+    "block.mubble.puyo_block": "Puyo block",
 
-    "block.mubble.rewind_block.mubble": "Rewind block.mubble",
-    "block.mubble.koretato_block.mubble": "Koretato block.mubble",
+    "block.mubble.rewind_block": "Rewind block",
+    "block.mubble.koretato_block": "Koretato block",
 
     //item.mubbleS
     "item.mubble.vanadium": "Vanadium",
@@ -275,7 +275,7 @@
     "advancements.mubble.get_vanadium.title": "Vanadiums!",
     "advancements.mubble.get_vanadium.description": "Acquire vanadiums",
     "advancements.mubble.get_tetris_block.mubble.title": "It's All Connected",
-    "advancements.mubble.get_tetris_block.mubble.description": "Get your hand on a Tetris block.mubble",
+    "advancements.mubble.get_tetris_block.mubble.description": "Get your hand on a Tetris block",
 
     //COMMANDS
     "commands.motion.usage": "/motion <entity> <set|add> [dX] [dY] [dZ]",
