--- a/src/main/resources/assets/mubble/lang/es_es.json
+++ b/src/main/resources/assets/mubble/lang/es_es.json
@@ -5,7 +5,7 @@
     "item.mubbleGroup.mubble_costumes": "Trajes de Mubble",
 
     //block.mubbleS
-    "block.mubble.vanadium_block.mubble": "Bloque de vanadio",
+    "block.mubble.vanadium_block": "Bloque de vanadio",
     "block.mubble.vanadium_ore": "Mena de vanadio",
     "block.mubble.red_bricks": "Ladrillos rojos",
     "block.mubble.red_brick_stairs": "Escalera de ladrillos rojos",
@@ -21,14 +21,14 @@
     "block.mubble.carbonite_wall": "Muro de carbonita",
     "block.mubble.polished_carbonite": "Carbonita pulida",
     "block.mubble.polished_carbonite_stairs": "Escalera de carbonita pulida",
-    "block.mubble.footblock.mubble": "Futbloque",
-    "block.mubble.white_cloud_block.mubble": "Bloque de nube blanca",
-    "block.mubble.light_gray_cloud_block.mubble": "Bloque de nube gris claro",
-    "block.mubble.gray_cloud_block.mubble": "Bloque de nube gris",
-    "block.mubble.black_cloud_block.mubble": "Bloque de nube negra",
+    "block.mubble.footblock": "Futbloque",
+    "block.mubble.white_cloud_block": "Bloque de nube blanca",
+    "block.mubble.light_gray_cloud_block": "Bloque de nube gris claro",
+    "block.mubble.gray_cloud_block": "Bloque de nube gris",
+    "block.mubble.black_cloud_block": "Bloque de nube negra",
     "block.mubble.tomato": "Tomates",
     "block.mubble.salad": "Ensalada",
-    "block.mubble.cheese_block.mubble": "Bloque de queso",
+    "block.mubble.cheese_block": "Bloque de queso",
     //"block.mubble.unstable_stone": "<newline>",
     //"block.mubble.ultimatum_portal": "<newline>",
     //"block.mubble.blue_balloon": "<newline>",
@@ -48,14 +48,14 @@
     //"block.mubble.gray_balloon": "<newline>",
     //"block.mubble.black_balloon": "<newline>",
 
-    "block.mubble.question_block.mubble": "Bloque ?",
-    "block.mubble.empty_block.mubble": "Bloque vacío",
-    "block.mubble.rotating_block.mubble": "Bloque giratorio",
-    "block.mubble.light_block.mubble": "Bloque luminoso",
-    "block.mubble.brick_block.mubble": "Bloque de ladrillo",
-    "block.mubble.golden_brick_block.mubble": "Bloque de ladrillo dorado",
-    "block.mubble.note_block.mubble": "Bloque nota",
-    "block.mubble.super_note_block.mubble": "Súper bloque nota",
+    "block.mubble.question_block": "Bloque ?",
+    "block.mubble.empty_block": "Bloque vacío",
+    "block.mubble.rotating_block": "Bloque giratorio",
+    "block.mubble.light_block": "Bloque luminoso",
+    "block.mubble.brick_block": "Bloque de ladrillo",
+    "block.mubble.golden_brick_block": "Bloque de ladrillo dorado",
+    "block.mubble.note_block": "Bloque nota",
+    "block.mubble.super_note_block": "Súper bloque nota",
     "block.mubble.fire_flower": "Flor de fuego",
     "block.mubble.ice_flower": "Flor de hielo",
     "block.mubble.boomerang_flower": "Flor boomerang",
@@ -75,37 +75,37 @@
     "block.mubble.light_gray_mushroom": "Champiñón gris claro",
     "block.mubble.gray_mushroom": "Champiñón gris",
     "block.mubble.black_mushroom": "Champiñón negro",
-    "block.mubble.blue_mushroom_block.mubble": "Bloque de champiñón azul",
-    "block.mubble.light_blue_mushroom_block.mubble": "Bloque de champiñón azul claro",
-    "block.mubble.cyan_mushroom_block.mubble": "Bloque de champiñón cian",
-    "block.mubble.green_mushroom_block.mubble": "Bloque de champiñón verde",
-    "block.mubble.lime_mushroom_block.mubble": "Bloque de champiñón lima",
-    "block.mubble.yellow_mushroom_block.mubble": "Bloque de champiñón amarillo",
-    "block.mubble.orange_mushroom_block.mubble": "Bloque de champiñón naranja",
-    "block.mubble.pink_mushroom_block.mubble": "Bloque de champiñón rosa",
-    "block.mubble.magenta_mushroom_block.mubble": "Bloque de champiñón magenta",
-    "block.mubble.purple_mushroom_block.mubble": "Bloque de champiñón violeta",
-    "block.mubble.white_mushroom_block.mubble": "Bloque de champiñón blanco",
-    "block.mubble.light_gray_mushroom_block.mubble": "Bloque de champiñón gris claro",
-    "block.mubble.gray_mushroom_block.mubble": "Bloque de champiñón gris",
-    "block.mubble.black_mushroom_block.mubble": "Bloque de champiñón negro",
+    "block.mubble.blue_mushroom_block": "Bloque de champiñón azul",
+    "block.mubble.light_blue_mushroom_block": "Bloque de champiñón azul claro",
+    "block.mubble.cyan_mushroom_block": "Bloque de champiñón cian",
+    "block.mubble.green_mushroom_block": "Bloque de champiñón verde",
+    "block.mubble.lime_mushroom_block": "Bloque de champiñón lima",
+    "block.mubble.yellow_mushroom_block": "Bloque de champiñón amarillo",
+    "block.mubble.orange_mushroom_block": "Bloque de champiñón naranja",
+    "block.mubble.pink_mushroom_block": "Bloque de champiñón rosa",
+    "block.mubble.magenta_mushroom_block": "Bloque de champiñón magenta",
+    "block.mubble.purple_mushroom_block": "Bloque de champiñón violeta",
+    "block.mubble.white_mushroom_block": "Bloque de champiñón blanco",
+    "block.mubble.light_gray_mushroom_block": "Bloque de champiñón gris claro",
+    "block.mubble.gray_mushroom_block": "Bloque de champiñón gris",
+    "block.mubble.black_mushroom_block": "Bloque de champiñón negro",
 
-    "block.mubble.blue_tetris_block.mubble": "Bloque de Tetris azul",
-    "block.mubble.light_blue_tetris_block.mubble": "Bloque de Tetris azul claro",
-    "block.mubble.cyan_tetris_block.mubble": "Bloque de Tetris cian",
-    "block.mubble.green_tetris_block.mubble": "Bloque de Tetris verde",
-    "block.mubble.lime_tetris_block.mubble": "Bloque de Tetris lima",
-    "block.mubble.yellow_tetris_block.mubble": "Bloque de Tetris amarillo",
-    "block.mubble.orange_tetris_block.mubble": "Bloque de Tetris naranja",
-    "block.mubble.red_tetris_block.mubble": "Bloque de Tetris rojo",
-    "block.mubble.pink_tetris_block.mubble": "Bloque de Tetris rosa",
-    "block.mubble.magenta_tetris_block.mubble": "Bloque de Tetris magenta",
-    "block.mubble.purple_tetris_block.mubble": "Bloque de Tetris violeta",
-    "block.mubble.brown_tetris_block.mubble": "Bloque de Tetris marrón",
-    "block.mubble.white_tetris_block.mubble": "Bloque de Tetris blanco",
-    "block.mubble.light_gray_tetris_block.mubble": "Bloque de Tetris gris claro",
-    "block.mubble.gray_tetris_block.mubble": "Bloque de Tetris gris",
-    "block.mubble.black_tetris_block.mubble": "Bloque de Tetris negro",
+    "block.mubble.blue_tetris_block": "Bloque de Tetris azul",
+    "block.mubble.light_blue_tetris_block": "Bloque de Tetris azul claro",
+    "block.mubble.cyan_tetris_block": "Bloque de Tetris cian",
+    "block.mubble.green_tetris_block": "Bloque de Tetris verde",
+    "block.mubble.lime_tetris_block": "Bloque de Tetris lima",
+    "block.mubble.yellow_tetris_block": "Bloque de Tetris amarillo",
+    "block.mubble.orange_tetris_block": "Bloque de Tetris naranja",
+    "block.mubble.red_tetris_block": "Bloque de Tetris rojo",
+    "block.mubble.pink_tetris_block": "Bloque de Tetris rosa",
+    "block.mubble.magenta_tetris_block": "Bloque de Tetris magenta",
+    "block.mubble.purple_tetris_block": "Bloque de Tetris violeta",
+    "block.mubble.brown_tetris_block": "Bloque de Tetris marrón",
+    "block.mubble.white_tetris_block": "Bloque de Tetris blanco",
+    "block.mubble.light_gray_tetris_block": "Bloque de Tetris gris claro",
+    "block.mubble.gray_tetris_block": "Bloque de Tetris gris",
+    "block.mubble.black_tetris_block": "Bloque de Tetris negro",
     "block.mubble.tetris_glass": "Bloque de Tetris de cristal",
     "block.mubble.japanese_tetris_cushion": "Cojín Tetris japonés",
     "block.mubble.rainbow_tetris_scaffolding": "Andamio de Tetris arco iris",
@@ -132,14 +132,14 @@
     "block.mubble.gray_candy_cane_pillar": "Pilar de bastón de caramelo gris",
     "block.mubble.black_candy_cane_pillar": "Pilar de bastón de caramelo negro",
 
-    "block.mubble.green_hill_grass_block.mubble": "Bloque de césped de Green Hill",
+    "block.mubble.green_hill_grass_block": "Bloque de césped de Green Hill",
     "block.mubble.green_hill_dirt": "Tierra de Green Hill",
     //"block.mubble.marble_zone_stone": "<newline>",
     "block.mubble.yellow_studiopolis_clapper": "Badajo de Studiópolis amarillo",
     "block.mubble.blue_studiopolis_clapper": "Badajo de Studiópolis azul",
     //"block.mubble.spring": "<newline>",
 
-    "block.mubble.scarlet_grass_block.mubble": "Bloque de césped escarlata",
+    "block.mubble.scarlet_grass_block": "Bloque de césped escarlata",
     "block.mubble.scarlet_grass": "Césped de escarlata",
     "block.mubble.scarlet_mushroom": "Champiñón escarlata",
     "block.mubble.scarlet_orchid": "Orquídea escarlata",
@@ -163,10 +163,10 @@
     //"block.mubble.point_puyo": "<newline>",
     //"block.mubble.hard_puyo": "<newline>",
     //"block.mubble.iron_puyo": "<newline>",
-    //"block.mubble.puyo_block.mubble": "<newline>",
+    //"block.mubble.puyo_block": "<newline>",
 
-    //"block.mubble.rewind_block.mubble": "<newline>",
-    "block.mubble.koretato_block.mubble": "Bloque Koretato",
+    //"block.mubble.rewind_block": "<newline>",
+    "block.mubble.koretato_block": "Bloque Koretato",
 
     //item.mubbleS
     "item.mubble.vanadium": "Vanadio",
@@ -236,7 +236,7 @@
     //"item.mubble.baldi_head": "<newline>",
 
     "item.mubble.mayro_cap": "Gorra de Mayro",
-    "item.mubble.noteblock.mubble_head": "Cabeza de Noteblock.mubble",
+    "item.mubble.noteblock.mubble_head": "Cabeza de Noteblock",
 
     //ENTITIES
     "entity.toad": "Toad",
