--- a/src/main/resources/assets/mubble/lang/fr_fe.json
+++ b/src/main/resources/assets/mubble/lang/fr_fe.json
@@ -5,7 +5,7 @@
     "item.mubbleGroup.mubble_costumes": "costum Mubble",
 
     //block.mubbleS
-    "block.mubble.vanadium_block.mubble": "cube joli et mjenta",
+    "block.mubble.vanadium_block": "cube joli et mjenta",
     "block.mubble.vanadium_ore": "minrai cool et mjenta",
     "block.mubble.red_bricks": "brik rouj",
     "block.mubble.red_brick_stairs": "escalator de briqe rouj",
@@ -21,14 +21,14 @@
     "block.mubble.carbonite_wall": "mur en carbolit",
     "block.mubble.polished_carbonite": "cobnite bo",
     //"block.mubble.polished_carbonite_stairs": "<newline>",
-    "block.mubble.footblock.mubble": "blok foutbol",
-    //"block.mubble.white_cloud_block.mubble": "<newline>",
-    //"block.mubble.light_gray_cloud_block.mubble": "<newline>",
-    //"block.mubble.gray_cloud_block.mubble": "<newline>",
-    //"block.mubble.black_cloud_block.mubble": "<newline>",
+    "block.mubble.footblock": "blok foutbol",
+    //"block.mubble.white_cloud_block": "<newline>",
+    //"block.mubble.light_gray_cloud_block": "<newline>",
+    //"block.mubble.gray_cloud_block": "<newline>",
+    //"block.mubble.black_cloud_block": "<newline>",
     //"block.mubble.tomato": "<newline>",
     //"block.mubble.salad": "<newline>",
-    //"block.mubble.cheese_block.mubble": "<newline>",
+    //"block.mubble.cheese_block": "<newline>",
     //"block.mubble.unstable_stone": "<newline>",
     //"block.mubble.ultimatum_portal": "<newline>",
     //"block.mubble.blue_balloon": "<newline>",
@@ -48,14 +48,14 @@
     //"block.mubble.gray_balloon": "<newline>",
     //"block.mubble.black_balloon": "<newline>",
 
-    "block.mubble.question_block.mubble": "bloc???",
-    "block.mubble.empty_block.mubble": "bloc san rien lol",
-    "block.mubble.rotating_block.mubble": "bloc tourn",
-    "block.mubble.light_block.mubble": "blok qui brye",
-    "block.mubble.brick_block.mubble": "blok de brik",
-    "block.mubble.golden_brick_block.mubble": "bloc de brik en or!!!!!",
-    "block.mubble.note_block.mubble": "blok sautai en ler",
-    "block.mubble.super_note_block.mubble": "super sautai supair en ler",
+    "block.mubble.question_block": "bloc???",
+    "block.mubble.empty_block": "bloc san rien lol",
+    "block.mubble.rotating_block": "bloc tourn",
+    "block.mubble.light_block": "blok qui brye",
+    "block.mubble.brick_block": "blok de brik",
+    "block.mubble.golden_brick_block": "bloc de brik en or!!!!!",
+    "block.mubble.note_block": "blok sautai en ler",
+    "block.mubble.super_note_block": "super sautai supair en ler",
     "block.mubble.fire_flower": "fleu de fee",
     "block.mubble.ice_flower": "fleu de glas",
     "block.mubble.boomerang_flower": "fleu boumrangue",
@@ -75,37 +75,37 @@
     //"block.mubble.light_gray_mushroom": "<newline>",
     //"block.mubble.gray_mushroom": "<newline>",
     //"block.mubble.black_mushroom": "<newline>",
-    //"block.mubble.blue_mushroom_block.mubble": "<newline>",
-    //"block.mubble.light_blue_mushroom_block.mubble": "<newline>",
-    //"block.mubble.cyan_mushroom_block.mubble": "<newline>",
-    //"block.mubble.green_mushroom_block.mubble": "<newline>",
-    //"block.mubble.lime_mushroom_block.mubble": "<newline>",
-    //"block.mubble.yellow_mushroom_block.mubble": "<newline>",
-    //"block.mubble.orange_mushroom_block.mubble": "<newline>",
-    //"block.mubble.pink_mushroom_block.mubble": "<newline>",
-    //"block.mubble.magenta_mushroom_block.mubble": "<newline>",
-    //"block.mubble.purple_mushroom_block.mubble": "<newline>",
-    //"block.mubble.white_mushroom_block.mubble": "<newline>",
-    //"block.mubble.light_gray_mushroom_block.mubble": "<newline>",
-    //"block.mubble.gray_mushroom_block.mubble": "<newline>",
-    //"block.mubble.black_mushroom_block.mubble": "<newline>",
+    //"block.mubble.blue_mushroom_block": "<newline>",
+    //"block.mubble.light_blue_mushroom_block": "<newline>",
+    //"block.mubble.cyan_mushroom_block": "<newline>",
+    //"block.mubble.green_mushroom_block": "<newline>",
+    //"block.mubble.lime_mushroom_block": "<newline>",
+    //"block.mubble.yellow_mushroom_block": "<newline>",
+    //"block.mubble.orange_mushroom_block": "<newline>",
+    //"block.mubble.pink_mushroom_block": "<newline>",
+    //"block.mubble.magenta_mushroom_block": "<newline>",
+    //"block.mubble.purple_mushroom_block": "<newline>",
+    //"block.mubble.white_mushroom_block": "<newline>",
+    //"block.mubble.light_gray_mushroom_block": "<newline>",
+    //"block.mubble.gray_mushroom_block": "<newline>",
+    //"block.mubble.black_mushroom_block": "<newline>",
 
-    //"block.mubble.blue_tetris_block.mubble": "<newline>",
-    //"block.mubble.light_blue_tetris_block.mubble": "<newline>",
-    //"block.mubble.cyan_tetris_block.mubble": "<newline>",
-    //"block.mubble.green_tetris_block.mubble": "<newline>",
-    //"block.mubble.lime_tetris_block.mubble": "<newline>",
-    //"block.mubble.yellow_tetris_block.mubble": "<newline>",
-    //"block.mubble.orange_tetris_block.mubble": "<newline>",
-    //"block.mubble.red_tetris_block.mubble": "<newline>",
-    //"block.mubble.pink_tetris_block.mubble": "<newline>",
-    //"block.mubble.magenta_tetris_block.mubble": "<newline>",
-    //"block.mubble.purple_tetris_block.mubble": "<newline>",
-    //"block.mubble.brown_tetris_block.mubble": "<newline>",
-    //"block.mubble.white_tetris_block.mubble": "<newline>",
-    //"block.mubble.light_gray_tetris_block.mubble": "<newline>",
-    //"block.mubble.gray_tetris_block.mubble": "<newline>",
-    //"block.mubble.black_tetris_block.mubble": "<newline>",
+    //"block.mubble.blue_tetris_block": "<newline>",
+    //"block.mubble.light_blue_tetris_block": "<newline>",
+    //"block.mubble.cyan_tetris_block": "<newline>",
+    //"block.mubble.green_tetris_block": "<newline>",
+    //"block.mubble.lime_tetris_block": "<newline>",
+    //"block.mubble.yellow_tetris_block": "<newline>",
+    //"block.mubble.orange_tetris_block": "<newline>",
+    //"block.mubble.red_tetris_block": "<newline>",
+    //"block.mubble.pink_tetris_block": "<newline>",
+    //"block.mubble.magenta_tetris_block": "<newline>",
+    //"block.mubble.purple_tetris_block": "<newline>",
+    //"block.mubble.brown_tetris_block": "<newline>",
+    //"block.mubble.white_tetris_block": "<newline>",
+    //"block.mubble.light_gray_tetris_block": "<newline>",
+    //"block.mubble.gray_tetris_block": "<newline>",
+    //"block.mubble.black_tetris_block": "<newline>",
     "block.mubble.tetris_glass": "ver titri",
     "block.mubble.japanese_tetris_cushion": "cousin CHINOIIS:!$ ahahha (tetri)",
     "block.mubble.rainbow_tetris_scaffolding": "shafaudaj tirtris ARC EN CIELLLLL!! tro bo lai arc en cie",
@@ -132,14 +132,14 @@
     //"block.mubble.gray_candy_cane_pillar": "<newline>",
     //"block.mubble.black_candy_cane_pillar": "<newline>",
 
-    //"block.mubble.green_hill_grass_block.mubble": "<newline>",
+    //"block.mubble.green_hill_grass_block": "<newline>",
     //"block.mubble.green_hill_dirt": "<newline>",
     //"block.mubble.marble_zone_stone": "<newline>",
     //"block.mubble.yellow_studiopolis_clapper": "<newline>",
     //"block.mubble.blue_studiopolis_clapper": "<newline>",
     //"block.mubble.spring": "<newline>",
 
-    //"block.mubble.scarlet_grass_block.mubble": "<newline>",
+    //"block.mubble.scarlet_grass_block": "<newline>",
     //"block.mubble.scarlet_grass": "<newline>",
     //"block.mubble.scarlet_mushroom": "<newline>",
     //"block.mubble.scarlet_orchid": "<newline>",
@@ -163,10 +163,10 @@
     //"block.mubble.point_puyo": "<newline>",
     //"block.mubble.hard_puyo": "<newline>",
     //"block.mubble.iron_puyo": "<newline>",
-    //"block.mubble.puyo_block.mubble": "<newline>",
+    //"block.mubble.puyo_block": "<newline>",
 
-    //"block.mubble.rewind_block.mubble": "<newline>",
-    "block.mubble.koretato_block.mubble": "patete qui vi",
+    //"block.mubble.rewind_block": "<newline>",
+    "block.mubble.koretato_block": "patete qui vi",
 
     //item.mubbleS
     "item.mubble.vanadium": "mincraf minerai cool pourpré",
@@ -365,7 +365,7 @@
     "death.attack.explosion": "%1$s c fé pété!!!!!!",
     "death.attack.explosion.player": "%1$s c fé pété par %2$s!!!!",
     "death.attack.fall": "%1$s ai tombé",
-    "death.attack.fallingblock.mubble": "%1$s es mor ecrase par un blok",
+    "death.attack.fallingblock": "%1$s es mor ecrase par un blok",
     "death.attack.fireball": "%1$s c fai schoot un ball de feu de %2$s",
     "death.attack.fireball.item.mubble": "%1$s c fai schoot un ball de feu de %2$s qui avait %3$s",
     "death.attack.fireworks": "%1$s c fai pulveriser de linterieur a cose de feu dartifesse",
