--- a/src/main/resources/assets/mubble/lang/fr_fr.json
+++ b/src/main/resources/assets/mubble/lang/fr_fr.json
@@ -5,7 +5,7 @@
     "item.mubbleGroup.mubble_costumes": "Costumes Mubble",
 
     //block.mubbleS
-    "block.mubble.vanadium_block.mubble": "Bloc de vanadium",
+    "block.mubble.vanadium_block": "Bloc de vanadium",
     "block.mubble.vanadium_ore": "Minerai de vanadium",
     "block.mubble.red_bricks": "Briques rouges",
     "block.mubble.red_brick_stairs": "Escaliers en brique rouge",
@@ -21,14 +21,14 @@
     "block.mubble.carbonite_wall": "Muret en carbonite",
     "block.mubble.polished_carbonite": "Carbonite polie",
     "block.mubble.polished_carbonite_stairs": "Escaliers en carbonite poli",
-    "block.mubble.footblock.mubble": "Bloc de foot",
-    "block.mubble.white_cloud_block.mubble": "Bloc de nuage blanc",
-    "block.mubble.light_gray_cloud_block.mubble": "Bloc de nuage gris clair",
-    "block.mubble.gray_cloud_block.mubble": "Bloc de nuage gris",
-    "block.mubble.black_cloud_block.mubble": "Bloc de nuage noir",
+    "block.mubble.footblock": "Bloc de foot",
+    "block.mubble.white_cloud_block": "Bloc de nuage blanc",
+    "block.mubble.light_gray_cloud_block": "Bloc de nuage gris clair",
+    "block.mubble.gray_cloud_block": "Bloc de nuage gris",
+    "block.mubble.black_cloud_block": "Bloc de nuage noir",
     "block.mubble.tomato": "Tomate",
     "block.mubble.salad": "Salade",
-    "block.mubble.cheese_block.mubble": "Bloc de fromage",
+    "block.mubble.cheese_block": "Bloc de fromage",
     "block.mubble.unstable_stone": "Roche instable",
     "block.mubble.ultimatum_portal": "Portail de l'Utimatum",
     //"block.mubble.blue_balloon": "<newline>",
@@ -48,14 +48,14 @@
     //"block.mubble.gray_balloon": "<newline>",
     //"block.mubble.black_balloon": "<newline>",
 
-    "block.mubble.question_block.mubble": "Bloc ?",
-    "block.mubble.empty_block.mubble": "Bloc vide",
-    "block.mubble.rotating_block.mubble": "Bloc pivotant",
-    "block.mubble.light_block.mubble": "Bloc lumineux",
-    "block.mubble.brick_block.mubble": "Bloc de brique",
-    "block.mubble.golden_brick_block.mubble": "Bloc de brique dorée",
-    "block.mubble.note_block.mubble": "Bloc note",
-    "block.mubble.super_note_block.mubble": "Super bloc note",
+    "block.mubble.question_block": "Bloc ?",
+    "block.mubble.empty_block": "Bloc vide",
+    "block.mubble.rotating_block": "Bloc pivotant",
+    "block.mubble.light_block": "Bloc lumineux",
+    "block.mubble.brick_block": "Bloc de brique",
+    "block.mubble.golden_brick_block": "Bloc de brique dorée",
+    "block.mubble.note_block": "Bloc note",
+    "block.mubble.super_note_block": "Super bloc note",
     "block.mubble.fire_flower": "Fleur de feu",
     "block.mubble.ice_flower": "Fleur de glace",
     "block.mubble.boomerang_flower": "Fleur boomerang",
@@ -75,37 +75,37 @@
     "block.mubble.light_gray_mushroom": "Champignon gris clair",
     "block.mubble.gray_mushroom": "Champignon gris",
     "block.mubble.black_mushroom": "Champignon noir",
-    "block.mubble.blue_mushroom_block.mubble": "Bloc de champignon bleu",
-    "block.mubble.light_blue_mushroom_block.mubble": "Bloc de champignon bleu clair",
-    "block.mubble.cyan_mushroom_block.mubble": "Bloc de champignon cyan",
-    "block.mubble.green_mushroom_block.mubble": "Bloc de champignon vert",
-    "block.mubble.lime_mushroom_block.mubble": "Bloc de champignon vert clair",
-    "block.mubble.yellow_mushroom_block.mubble": "Bloc de champignon jaune",
-    "block.mubble.orange_mushroom_block.mubble": "Bloc de champignon orange",
-    "block.mubble.pink_mushroom_block.mubble": "Bloc de champignon rose",
-    "block.mubble.magenta_mushroom_block.mubble": "Bloc de champignon magenta",
-    "block.mubble.purple_mushroom_block.mubble": "Bloc de champignon violet",
-    "block.mubble.white_mushroom_block.mubble": "Bloc de champignon blanc",
-    "block.mubble.light_gray_mushroom_block.mubble": "Bloc de champignon gris clair",
-    "block.mubble.gray_mushroom_block.mubble": "Bloc de champignon gris",
-    "block.mubble.black_mushroom_block.mubble": "Bloc de champignon noir",
+    "block.mubble.blue_mushroom_block": "Bloc de champignon bleu",
+    "block.mubble.light_blue_mushroom_block": "Bloc de champignon bleu clair",
+    "block.mubble.cyan_mushroom_block": "Bloc de champignon cyan",
+    "block.mubble.green_mushroom_block": "Bloc de champignon vert",
+    "block.mubble.lime_mushroom_block": "Bloc de champignon vert clair",
+    "block.mubble.yellow_mushroom_block": "Bloc de champignon jaune",
+    "block.mubble.orange_mushroom_block": "Bloc de champignon orange",
+    "block.mubble.pink_mushroom_block": "Bloc de champignon rose",
+    "block.mubble.magenta_mushroom_block": "Bloc de champignon magenta",
+    "block.mubble.purple_mushroom_block": "Bloc de champignon violet",
+    "block.mubble.white_mushroom_block": "Bloc de champignon blanc",
+    "block.mubble.light_gray_mushroom_block": "Bloc de champignon gris clair",
+    "block.mubble.gray_mushroom_block": "Bloc de champignon gris",
+    "block.mubble.black_mushroom_block": "Bloc de champignon noir",
 
-    "block.mubble.blue_tetris_block.mubble": "Bloc Tetris bleu",
-    "block.mubble.light_blue_tetris_block.mubble": "Bloc Tetris bleu clair",
-    "block.mubble.cyan_tetris_block.mubble": "Bloc Tetris cyan",
-    "block.mubble.green_tetris_block.mubble": "Bloc Tetris vert",
-    "block.mubble.lime_tetris_block.mubble": "Bloc Tetris vert clair",
-    "block.mubble.yellow_tetris_block.mubble": "Bloc Tetris jaune",
-    "block.mubble.orange_tetris_block.mubble": "Bloc Tetris orange",
-    "block.mubble.red_tetris_block.mubble": "Bloc Tetris rouge",
-    "block.mubble.pink_tetris_block.mubble": "Bloc Tetris rose",
-    "block.mubble.magenta_tetris_block.mubble": "Bloc Tetris magenta",
-    "block.mubble.purple_tetris_block.mubble": "Bloc Tetris violet",
-    "block.mubble.brown_tetris_block.mubble": "Bloc Tetris marron",
-    "block.mubble.white_tetris_block.mubble": "Bloc Tetris blanc",
-    "block.mubble.light_gray_tetris_block.mubble": "Bloc Tetris gris clair",
-    "block.mubble.gray_tetris_block.mubble": "Bloc Tetris gris",
-    "block.mubble.black_tetris_block.mubble": "Bloc Tetris noir",
+    "block.mubble.blue_tetris_block": "Bloc Tetris bleu",
+    "block.mubble.light_blue_tetris_block": "Bloc Tetris bleu clair",
+    "block.mubble.cyan_tetris_block": "Bloc Tetris cyan",
+    "block.mubble.green_tetris_block": "Bloc Tetris vert",
+    "block.mubble.lime_tetris_block": "Bloc Tetris vert clair",
+    "block.mubble.yellow_tetris_block": "Bloc Tetris jaune",
+    "block.mubble.orange_tetris_block": "Bloc Tetris orange",
+    "block.mubble.red_tetris_block": "Bloc Tetris rouge",
+    "block.mubble.pink_tetris_block": "Bloc Tetris rose",
+    "block.mubble.magenta_tetris_block": "Bloc Tetris magenta",
+    "block.mubble.purple_tetris_block": "Bloc Tetris violet",
+    "block.mubble.brown_tetris_block": "Bloc Tetris marron",
+    "block.mubble.white_tetris_block": "Bloc Tetris blanc",
+    "block.mubble.light_gray_tetris_block": "Bloc Tetris gris clair",
+    "block.mubble.gray_tetris_block": "Bloc Tetris gris",
+    "block.mubble.black_tetris_block": "Bloc Tetris noir",
     "block.mubble.tetris_glass": "Verre Tetris",
     "block.mubble.japanese_tetris_cushion": "Coussin Tetris japonais",
     "block.mubble.rainbow_tetris_scaffolding": "Échafaudage Tetris multicolore",
@@ -132,14 +132,14 @@
     "block.mubble.gray_candy_cane_pillar": "Pilier de sucre d'orge gris",
     "block.mubble.black_candy_cane_pillar": "Pilier de sucre d'orge noir",
 
-    "block.mubble.green_hill_grass_block.mubble": "Bloc d'herbe de Green Hill",
+    "block.mubble.green_hill_grass_block": "Bloc d'herbe de Green Hill",
     "block.mubble.green_hill_dirt": "Terre de Green Hill",
     "block.mubble.marble_zone_stone": "Pierre de la zone Marble",
     "block.mubble.yellow_studiopolis_clapper": "Clap jaune de Studiopolis",
     "block.mubble.blue_studiopolis_clapper": "Clap bleu de Studiopolis",
     //"block.mubble.spring": "<newline>",
 
-    "block.mubble.scarlet_grass_block.mubble": "Bloc d'herbe écarlate",
+    "block.mubble.scarlet_grass_block": "Bloc d'herbe écarlate",
     "block.mubble.scarlet_grass": "Herbe écarlate",
     "block.mubble.scarlet_mushroom": "Champignon écarlate",
     "block.mubble.scarlet_orchid": "Orchidée écarlate",
@@ -163,10 +163,10 @@
     //"block.mubble.point_puyo": "<newline>",
     //"block.mubble.hard_puyo": "<newline>",
     //"block.mubble.iron_puyo": "<newline>",
-    //"block.mubble.puyo_block.mubble": "<newline>",
+    //"block.mubble.puyo_block": "<newline>",
 
-    "block.mubble.rewind_block.mubble": "Bloc Rewind",
-    "block.mubble.koretato_block.mubble": "Bloc Koretato",
+    "block.mubble.rewind_block": "Bloc Rewind",
+    "block.mubble.koretato_block": "Bloc Koretato",
 
     //item.mubbleS
     "item.mubble.vanadium": "Vanadium",
@@ -236,7 +236,7 @@
     "item.mubble.baldi_head": "Tête de Baldi",
 
     "item.mubble.mayro_cap": "Casquette de Mayro",
-    "item.mubble.noteblock.mubble_head": "Tête de Noteblock.mubble",
+    "item.mubble.noteblock.mubble_head": "Tête de Noteblock",
 
     //ENTITIES
     "entity.toad": "Toad",
