--- a/src/main/resources/assets/mubble/lang/lol_us.json
+++ b/src/main/resources/assets/mubble/lang/lol_us.json
@@ -5,7 +5,7 @@
     "item.mubbleGroup.mubble_costumes": "Mubble put things on you for no reazon lol",
 
     //block.mubbleS
-    "block.mubble.vanadium_block.mubble": "shiny purple cube",
+    "block.mubble.vanadium_block": "shiny purple cube",
     "block.mubble.vanadium_ore": "shiny purple in blox",
     "block.mubble.red_bricks": "bloo brik",
     "block.mubble.red_brick_stairs": "bloo birk sters",
@@ -21,14 +21,14 @@
     "block.mubble.carbonite_wall": "blac stoneh woll",
     "block.mubble.polished_carbonite": "pretteh blac ston",
     "block.mubble.polished_carbonite_stairs": "pretteh blac sters",
-    "block.mubble.footblock.mubble": "SOCCEEEbloc",
-    "block.mubble.white_cloud_block.mubble": "clou itz white",
-    "block.mubble.light_gray_cloud_block.mubble": "clou itz less white",
-    "block.mubble.gray_cloud_block.mubble": "clou itz lesser white",
-    "block.mubble.black_cloud_block.mubble": "clou itz 0% white",
+    "block.mubble.footblock": "SOCCEEEbloc",
+    "block.mubble.white_cloud_block": "clou itz white",
+    "block.mubble.light_gray_cloud_block": "clou itz less white",
+    "block.mubble.gray_cloud_block": "clou itz lesser white",
+    "block.mubble.black_cloud_block": "clou itz 0% white",
     "block.mubble.tomato": "redd fud",
     "block.mubble.salad": "green fud",
-    "block.mubble.cheese_block.mubble": "cheezy bloc",
+    "block.mubble.cheese_block": "cheezy bloc",
     "block.mubble.unstable_stone": "crac ston",
     "block.mubble.ultimatum_portal": "woah it iz en unusod porteel item.mubble",
     "block.mubble.blue_balloon": "bloo beloon",
@@ -48,14 +48,14 @@
     "block.mubble.gray_balloon": "lesser wot beloon",
     "block.mubble.black_balloon": "not even wot beloon",
 
-    "block.mubble.question_block.mubble": "BLOC ???? BLOOOOOC ?????????????",
-    "block.mubble.empty_block.mubble": "GBJ",
-    "block.mubble.rotating_block.mubble": "movin cube",
-    "block.mubble.light_block.mubble": "super shiny boiii",
-    "block.mubble.brick_block.mubble": "brik stak",
-    "block.mubble.golden_brick_block.mubble": "guld brik stak",
-    "block.mubble.note_block.mubble": "bouncy stun",
-    "block.mubble.super_note_block.mubble": "SUPER bouncy stun",
+    "block.mubble.question_block": "BLOC ???? BLOOOOOC ?????????????",
+    "block.mubble.empty_block": "GBJ",
+    "block.mubble.rotating_block": "movin cube",
+    "block.mubble.light_block": "super shiny boiii",
+    "block.mubble.brick_block": "brik stak",
+    "block.mubble.golden_brick_block": "guld brik stak",
+    "block.mubble.note_block": "bouncy stun",
+    "block.mubble.super_note_block": "SUPER bouncy stun",
     "block.mubble.fire_flower": "fir flow",
     "block.mubble.ice_flower": "ice flow",
     "block.mubble.boomerang_flower": "triangle ting flow",
@@ -75,37 +75,37 @@
     "block.mubble.light_gray_mushroom": "lig gry mesom",
     "block.mubble.gray_mushroom": "gyyyy shoom",
     "block.mubble.black_mushroom": "blok mush",
-    "block.mubble.blue_mushroom_block.mubble": "bloo blocroom",
-    "block.mubble.light_blue_mushroom_block.mubble": "legit blocroom",
-    "block.mubble.cyan_mushroom_block.mubble": "super cyan blocroom",
-    "block.mubble.green_mushroom_block.mubble": "gren blocroom",
-    "block.mubble.lime_mushroom_block.mubble": "not a lemun blocroom",
-    "block.mubble.yellow_mushroom_block.mubble": "lemun blocroom",
-    "block.mubble.orange_mushroom_block.mubble": "oreng blocroom",
-    "block.mubble.pink_mushroom_block.mubble": "pinky blocroom",
-    "block.mubble.magenta_mushroom_block.mubble": "megente blocroom",
-    "block.mubble.purple_mushroom_block.mubble": "burple blocroom",
-    "block.mubble.white_mushroom_block.mubble": "wot blocroom",
-    "block.mubble.light_gray_mushroom_block.mubble": "legit greey blocroom",
-    "block.mubble.gray_mushroom_block.mubble": "greey blocroom",
-    "block.mubble.black_mushroom_block.mubble": "blac blocroom",
+    "block.mubble.blue_mushroom_block": "bloo blocroom",
+    "block.mubble.light_blue_mushroom_block": "legit blocroom",
+    "block.mubble.cyan_mushroom_block": "super cyan blocroom",
+    "block.mubble.green_mushroom_block": "gren blocroom",
+    "block.mubble.lime_mushroom_block": "not a lemun blocroom",
+    "block.mubble.yellow_mushroom_block": "lemun blocroom",
+    "block.mubble.orange_mushroom_block": "oreng blocroom",
+    "block.mubble.pink_mushroom_block": "pinky blocroom",
+    "block.mubble.magenta_mushroom_block": "megente blocroom",
+    "block.mubble.purple_mushroom_block": "burple blocroom",
+    "block.mubble.white_mushroom_block": "wot blocroom",
+    "block.mubble.light_gray_mushroom_block": "legit greey blocroom",
+    "block.mubble.gray_mushroom_block": "greey blocroom",
+    "block.mubble.black_mushroom_block": "blac blocroom",
 
-    //"block.mubble.blue_tetris_block.mubble": "<newline>",
-    //"block.mubble.light_blue_tetris_block.mubble": "<newline>",
-    //"block.mubble.cyan_tetris_block.mubble": "<newline>",
-    //"block.mubble.green_tetris_block.mubble": "<newline>",
-    //"block.mubble.lime_tetris_block.mubble": "<newline>",
-    //"block.mubble.yellow_tetris_block.mubble": "<newline>",
-    //"block.mubble.orange_tetris_block.mubble": "<newline>",
-    //"block.mubble.red_tetris_block.mubble": "<newline>",
-    //"block.mubble.pink_tetris_block.mubble": "<newline>",
-    //"block.mubble.magenta_tetris_block.mubble": "<newline>",
-    //"block.mubble.purple_tetris_block.mubble": "<newline>",
-    //"block.mubble.brown_tetris_block.mubble": "<newline>",
-    //"block.mubble.white_tetris_block.mubble": "<newline>",
-    //"block.mubble.light_gray_tetris_block.mubble": "<newline>",
-    //"block.mubble.gray_tetris_block.mubble": "<newline>",
-    //"block.mubble.black_tetris_block.mubble": "<newline>",
+    //"block.mubble.blue_tetris_block": "<newline>",
+    //"block.mubble.light_blue_tetris_block": "<newline>",
+    //"block.mubble.cyan_tetris_block": "<newline>",
+    //"block.mubble.green_tetris_block": "<newline>",
+    //"block.mubble.lime_tetris_block": "<newline>",
+    //"block.mubble.yellow_tetris_block": "<newline>",
+    //"block.mubble.orange_tetris_block": "<newline>",
+    //"block.mubble.red_tetris_block": "<newline>",
+    //"block.mubble.pink_tetris_block": "<newline>",
+    //"block.mubble.magenta_tetris_block": "<newline>",
+    //"block.mubble.purple_tetris_block": "<newline>",
+    //"block.mubble.brown_tetris_block": "<newline>",
+    //"block.mubble.white_tetris_block": "<newline>",
+    //"block.mubble.light_gray_tetris_block": "<newline>",
+    //"block.mubble.gray_tetris_block": "<newline>",
+    //"block.mubble.black_tetris_block": "<newline>",
     "block.mubble.tetris_glass": "tetri glazz",
     "block.mubble.japanese_tetris_cushion": "jaPAN tetri sleep",
     "block.mubble.rainbow_tetris_scaffolding": "varicolordd tetri zcffolding",
@@ -132,14 +132,14 @@
     //"block.mubble.gray_candy_cane_pillar": "<newline>",
     //"block.mubble.black_candy_cane_pillar": "<newline>",
 
-    "block.mubble.green_hill_grass_block.mubble": "FEEST gress bloc",
+    "block.mubble.green_hill_grass_block": "FEEST gress bloc",
     "block.mubble.green_hill_dirt": "FEEST dit",
     "block.mubble.marble_zone_stone": "FEEST merbl",
     "block.mubble.yellow_studiopolis_clapper": "lemun clap clap",
     "block.mubble.blue_studiopolis_clapper": "bloo clap clap",
     "block.mubble.spring": "BOing",
 
-    "block.mubble.scarlet_grass_block.mubble": "scarleet gress bloc",
+    "block.mubble.scarlet_grass_block": "scarleet gress bloc",
     "block.mubble.scarlet_grass": "scarleet gress",
     "block.mubble.scarlet_mushroom": "scarleet mesroom",
     "block.mubble.scarlet_orchid": "scarleet flowey",
@@ -163,10 +163,10 @@
     "block.mubble.point_puyo": "pure pint pyo",
     "block.mubble.hard_puyo": "My puyo hard",
     "block.mubble.iron_puyo": "ALIEEEEEEEN PYO AHHHHHHH",
-    "block.mubble.puyo_block.mubble": "it's a pyo ston lol",
+    "block.mubble.puyo_block": "it's a pyo ston lol",
 
-    "block.mubble.rewind_block.mubble": "aww dat'z hawt",
-    "block.mubble.koretato_block.mubble": "Koretato blok",
+    "block.mubble.rewind_block": "aww dat'z hawt",
+    "block.mubble.koretato_block": "Koretato blok",
 
     //item.mubbleS
     "item.mubble.vanadium": "shiny purple",
