--- a/src/main/resources/assets/mubble/lang/nl_nl.json
+++ b/src/main/resources/assets/mubble/lang/nl_nl.json
@@ -5,7 +5,7 @@
     "item.mubbleGroup.mubble_costumes": "Mubble kostuums",
 
     //block.mubbleS
-    "block.mubble.vanadium_block.mubble": "Vanadiumblok",
+    "block.mubble.vanadium_block": "Vanadiumblok",
     "block.mubble.vanadium_ore": "Vanadiumerts",
     "block.mubble.red_bricks": "Rode bakstenen",
     "block.mubble.red_brick_stairs": "Rode bakstenen trap",
@@ -21,14 +21,14 @@
     "block.mubble.carbonite_wall": "Carbonite muur",
     "block.mubble.polished_carbonite": "Gepolijst carbonite",
     "block.mubble.polished_carbonite_stairs": "Gepolijst carbonite trap",
-    "block.mubble.footblock.mubble": "Voetblok",
-    "block.mubble.white_cloud_block.mubble": "Wittewolkblok",
-    "block.mubble.light_gray_cloud_block.mubble": "Lichtgrijzewolkblok",
-    "block.mubble.gray_cloud_block.mubble": "Grijzewolkblok",
-    "block.mubble.black_cloud_block.mubble": "Zwartewolkblok",
+    "block.mubble.footblock": "Voetblok",
+    "block.mubble.white_cloud_block": "Wittewolkblok",
+    "block.mubble.light_gray_cloud_block": "Lichtgrijzewolkblok",
+    "block.mubble.gray_cloud_block": "Grijzewolkblok",
+    "block.mubble.black_cloud_block": "Zwartewolkblok",
     "block.mubble.tomato": "Tomaten",
     "block.mubble.salad": "Salade",
-    "block.mubble.cheese_block.mubble": "Kaasblok",
+    "block.mubble.cheese_block": "Kaasblok",
     "block.mubble.unstable_stone": "Onstabiel steen",
     "block.mubble.ultimatum_portal": "Ultimatumportaal",
     "block.mubble.blue_balloon": "Blauwe ballon",
@@ -48,14 +48,14 @@
     "block.mubble.gray_balloon": "Grijze ballon",
     "block.mubble.black_balloon": "Zwarte ballon",
 
-    "block.mubble.question_block.mubble": "?-blok",
-    "block.mubble.empty_block.mubble": "Leeg blok",
-    "block.mubble.rotating_block.mubble": "Draaiend blok",
-    "block.mubble.light_block.mubble": "Licht blok",
-    "block.mubble.brick_block.mubble": "Baksteenenblok",
-    "block.mubble.golden_brick_block.mubble": "Gouden baksteenenblok",
-    "block.mubble.note_block.mubble": "Nootblok",
-    "block.mubble.super_note_block.mubble": "Super nootblok",
+    "block.mubble.question_block": "?-blok",
+    "block.mubble.empty_block": "Leeg blok",
+    "block.mubble.rotating_block": "Draaiend blok",
+    "block.mubble.light_block": "Licht blok",
+    "block.mubble.brick_block": "Baksteenenblok",
+    "block.mubble.golden_brick_block": "Gouden baksteenenblok",
+    "block.mubble.note_block": "Nootblok",
+    "block.mubble.super_note_block": "Super nootblok",
     "block.mubble.fire_flower": "Vuur bloem",
     "block.mubble.ice_flower": "IJs bloem",
     "block.mubble.boomerang_flower": "Boomerang bloem",
@@ -75,37 +75,37 @@
     "block.mubble.light_gray_mushroom": "Lichtgrijse paddenstoel",
     "block.mubble.gray_mushroom": "Grijse paddenstoel",
     "block.mubble.black_mushroom": "Zwarte paddenstoel",
-    "block.mubble.blue_mushroom_block.mubble": "Blauw paddenstoelenblok",
-    "block.mubble.light_blue_mushroom_block.mubble": "Lichtblauw paddenstoelenblok",
-    "block.mubble.cyan_mushroom_block.mubble": "Turquois paddenstoelenblok",
-    "block.mubble.green_mushroom_block.mubble": "Groen paddenstoelenblok",
-    "block.mubble.lime_mushroom_block.mubble": "Lichtgroen paddenstoelenblok",
-    "block.mubble.yellow_mushroom_block.mubble": "Geel paddenstoelenblok",
-    "block.mubble.orange_mushroom_block.mubble": "Oranje paddenstoelenblok",
-    "block.mubble.pink_mushroom_block.mubble": "Roze paddenstoelenblok",
-    "block.mubble.magenta_mushroom_block.mubble": "Magenta paddenstoelenblok",
-    "block.mubble.purple_mushroom_block.mubble": "Paars paddenstoelenblok",
-    "block.mubble.white_mushroom_block.mubble": "Wit paddenstoelenblok",
-    "block.mubble.light_gray_mushroom_block.mubble": "Lichtgrijs paddenstoelenblok",
-    "block.mubble.gray_mushroom_block.mubble": "Grijs paddenstoelenblok",
-    "block.mubble.black_mushroom_block.mubble": "Zwart paddenstoelenblok",
+    "block.mubble.blue_mushroom_block": "Blauw paddenstoelenblok",
+    "block.mubble.light_blue_mushroom_block": "Lichtblauw paddenstoelenblok",
+    "block.mubble.cyan_mushroom_block": "Turquois paddenstoelenblok",
+    "block.mubble.green_mushroom_block": "Groen paddenstoelenblok",
+    "block.mubble.lime_mushroom_block": "Lichtgroen paddenstoelenblok",
+    "block.mubble.yellow_mushroom_block": "Geel paddenstoelenblok",
+    "block.mubble.orange_mushroom_block": "Oranje paddenstoelenblok",
+    "block.mubble.pink_mushroom_block": "Roze paddenstoelenblok",
+    "block.mubble.magenta_mushroom_block": "Magenta paddenstoelenblok",
+    "block.mubble.purple_mushroom_block": "Paars paddenstoelenblok",
+    "block.mubble.white_mushroom_block": "Wit paddenstoelenblok",
+    "block.mubble.light_gray_mushroom_block": "Lichtgrijs paddenstoelenblok",
+    "block.mubble.gray_mushroom_block": "Grijs paddenstoelenblok",
+    "block.mubble.black_mushroom_block": "Zwart paddenstoelenblok",
 
-    "block.mubble.blue_tetris_block.mubble": "Blauw Tetris blok",
-    "block.mubble.light_blue_tetris_block.mubble": "Lichtblauw Tetris blok",
-    "block.mubble.cyan_tetris_block.mubble": "Turquois Tetris blok",
-    "block.mubble.green_tetris_block.mubble": "Groen Tetris blok",
-    "block.mubble.lime_tetris_block.mubble": "Lichtgroen Tetris blok",
-    "block.mubble.yellow_tetris_block.mubble": "Geel Tetris blok",
-    "block.mubble.orange_tetris_block.mubble": "Oranje Tetris blok",
-    "block.mubble.red_tetris_block.mubble": "Rood Tetris blok",
-    "block.mubble.pink_tetris_block.mubble": "Roze Tetris blok",
-    "block.mubble.magenta_tetris_block.mubble": "Magenta Tetris blok",
-    "block.mubble.purple_tetris_block.mubble": "Paars Tetris blok",
-    "block.mubble.brown_tetris_block.mubble": "Bruin Tetris blok",
-    "block.mubble.white_tetris_block.mubble": "Wit Tetris blok",
-    "block.mubble.light_gray_tetris_block.mubble": "Lichtgrijs Tetris blok",
-    "block.mubble.gray_tetris_block.mubble": "Grijs Tetris blok",
-    "block.mubble.black_tetris_block.mubble": "Zwart Tetris blok",
+    "block.mubble.blue_tetris_block": "Blauw Tetris blok",
+    "block.mubble.light_blue_tetris_block": "Lichtblauw Tetris blok",
+    "block.mubble.cyan_tetris_block": "Turquois Tetris blok",
+    "block.mubble.green_tetris_block": "Groen Tetris blok",
+    "block.mubble.lime_tetris_block": "Lichtgroen Tetris blok",
+    "block.mubble.yellow_tetris_block": "Geel Tetris blok",
+    "block.mubble.orange_tetris_block": "Oranje Tetris blok",
+    "block.mubble.red_tetris_block": "Rood Tetris blok",
+    "block.mubble.pink_tetris_block": "Roze Tetris blok",
+    "block.mubble.magenta_tetris_block": "Magenta Tetris blok",
+    "block.mubble.purple_tetris_block": "Paars Tetris blok",
+    "block.mubble.brown_tetris_block": "Bruin Tetris blok",
+    "block.mubble.white_tetris_block": "Wit Tetris blok",
+    "block.mubble.light_gray_tetris_block": "Lichtgrijs Tetris blok",
+    "block.mubble.gray_tetris_block": "Grijs Tetris blok",
+    "block.mubble.black_tetris_block": "Zwart Tetris blok",
     "block.mubble.tetris_glass": "Tetris glas",
     "block.mubble.japanese_tetris_cushion": "Japans Tetris kussen",
     "block.mubble.rainbow_tetris_scaffolding": "Regenboog Tetris steiger",
@@ -132,14 +132,14 @@
     "block.mubble.gray_candy_cane_pillar": "Grijze zuurstokpillaar",
     "block.mubble.black_candy_cane_pillar": "Zwarte zuurstokpillaar",
 
-    "block.mubble.green_hill_grass_block.mubble": "Groeneheuvel grasblok",
+    "block.mubble.green_hill_grass_block": "Groeneheuvel grasblok",
     "block.mubble.green_hill_dirt": "Groeneheuvel gras",
     "block.mubble.marble_zone_stone": "Marblezone steen",
     "block.mubble.yellow_studiopolis_clapper": "Gele studiopolisklepel",
     "block.mubble.blue_studiopolis_clapper": "Blauwe studiopolisklepel",
     "block.mubble.spring": "Veer",
 
-    "block.mubble.scarlet_grass_block.mubble": "Scharlake grasblok",
+    "block.mubble.scarlet_grass_block": "Scharlake grasblok",
     "block.mubble.scarlet_grass": "Scharlake gras",
     "block.mubble.scarlet_mushroom": "Scharlake paddenstoel",
     "block.mubble.scarlet_orchid": "Scharlake orchidee",
@@ -163,10 +163,10 @@
     "block.mubble.point_puyo": "Punt puyo",
     "block.mubble.hard_puyo": "Harde puyo",
     "block.mubble.iron_puyo": "IJzere puyo",
-    "block.mubble.puyo_block.mubble": "Puyoblok",
+    "block.mubble.puyo_block": "Puyoblok",
 
-    "block.mubble.rewind_block.mubble": "Terugspoelblok",
-    "block.mubble.koretato_block.mubble": "Koretato-blok",
+    "block.mubble.rewind_block": "Terugspoelblok",
+    "block.mubble.koretato_block": "Koretato-blok",
 
     //item.mubbleS
     "item.mubble.vanadium": "Vanadium",
