--- a/src/main/resources/assets/mubble/lang/pt_br.json
+++ b/src/main/resources/assets/mubble/lang/pt_br.json
@@ -5,7 +5,7 @@
     "item.mubbleGroup.mubble_costumes": "Trajes de Mubble",
 
     //block.mubbleS
-    "block.mubble.vanadium_block.mubble": "Bloco de Vanadium",
+    "block.mubble.vanadium_block": "Bloco de Vanadium",
     "block.mubble.vanadium_ore": "Minério de Vanadium",
     "block.mubble.red_bricks": "Tijolos Vermelhos",
     "block.mubble.red_brick_stairs": "Escadas de Tijolos Vermelhos",
@@ -21,14 +21,14 @@
     "block.mubble.carbonite_wall": "Parede de Carbonite",
     "block.mubble.polished_carbonite": "Carbonite Polido",
     "block.mubble.polished_carbonite_stairs": "Escadas de Carbonite Polido",
-    "block.mubble.footblock.mubble": "Futebloco",
-    "block.mubble.white_cloud_block.mubble": "Bloco de Nuvem Branca",
-    "block.mubble.light_gray_cloud_block.mubble": "Bloco de Nuvem Cinza-Claro",
-    "block.mubble.gray_cloud_block.mubble": "Bloco de Nuvem Cinza",
-    "block.mubble.black_cloud_block.mubble": "Bloco de Nuvem Preta",
+    "block.mubble.footblock": "Futebloco",
+    "block.mubble.white_cloud_block": "Bloco de Nuvem Branca",
+    "block.mubble.light_gray_cloud_block": "Bloco de Nuvem Cinza-Claro",
+    "block.mubble.gray_cloud_block": "Bloco de Nuvem Cinza",
+    "block.mubble.black_cloud_block": "Bloco de Nuvem Preta",
     "block.mubble.tomato": "Tomates",
     "block.mubble.salad": "Salada",
-    "block.mubble.cheese_block.mubble": "Bloco de Queijo",
+    "block.mubble.cheese_block": "Bloco de Queijo",
     "block.mubble.unstable_stone": "Pedra Instável",
     "block.mubble.ultimatum_portal": "Portal Ultimatum",
     "block.mubble.blue_balloon": "Balão Azul",
@@ -48,14 +48,14 @@
     "block.mubble.gray_balloon": "Balão Cinza",
     "block.mubble.black_balloon": "Balão Preto",
 
-    "block.mubble.question_block.mubble": "Bloco de ?",
-    "block.mubble.empty_block.mubble": "Bloco Vazio",
-    "block.mubble.rotating_block.mubble": "Bloco Rotativo",
-    "block.mubble.light_block.mubble": "Bloco de Luz",
-    "block.mubble.brick_block.mubble": "Bloco de Tijolo",
-    "block.mubble.golden_brick_block.mubble": "Bloco de Tijolo Dourado",
-    "block.mubble.note_block.mubble": "Bloco de Nota",
-    "block.mubble.super_note_block.mubble": "Super Bloco de Nota",
+    "block.mubble.question_block": "Bloco de ?",
+    "block.mubble.empty_block": "Bloco Vazio",
+    "block.mubble.rotating_block": "Bloco Rotativo",
+    "block.mubble.light_block": "Bloco de Luz",
+    "block.mubble.brick_block": "Bloco de Tijolo",
+    "block.mubble.golden_brick_block": "Bloco de Tijolo Dourado",
+    "block.mubble.note_block": "Bloco de Nota",
+    "block.mubble.super_note_block": "Super Bloco de Nota",
     "block.mubble.fire_flower": "Flor de Fogo",
     "block.mubble.ice_flower": "Flor de Gelo",
     "block.mubble.boomerang_flower": "Flor de Bumerangue",
@@ -75,37 +75,37 @@
     "block.mubble.light_gray_mushroom": "Cogumelo Cinza Claro",
     "block.mubble.gray_mushroom": "Cogumelo Cinza",
     "block.mubble.black_mushroom": "Cogumelo Preto",
-    "block.mubble.blue_mushroom_block.mubble": "Bloco de Cogumelo Azul",
-    "block.mubble.light_blue_mushroom_block.mubble": "Bloco de Cogumelo Azul Claro",
-    "block.mubble.cyan_mushroom_block.mubble": "Bloco de Cogumelo Ciano",
-    "block.mubble.green_mushroom_block.mubble": "Bloco de Cogumelo Verde",
-    "block.mubble.lime_mushroom_block.mubble": "Bloco de Cogumelo Lima",
-    "block.mubble.yellow_mushroom_block.mubble": "Bloco de Cogumelo Amarelo",
-    "block.mubble.orange_mushroom_block.mubble": "Bloco de Cogumelo Laranja",
-    "block.mubble.pink_mushroom_block.mubble": "Bloco de Cogumelo Rosa",
-    "block.mubble.magenta_mushroom_block.mubble": "Bloco de Cogumelo Magenta",
-    "block.mubble.purple_mushroom_block.mubble": "Bloco de Cogumelo Roxo",
-    "block.mubble.white_mushroom_block.mubble": "Bloco de Cogumelo Branco",
-    "block.mubble.light_gray_mushroom_block.mubble": "Bloco de Cogumelo Cinza Claro",
-    "block.mubble.gray_mushroom_block.mubble": "Bloco de Cogumelo Cinza",
-    "block.mubble.black_mushroom_block.mubble": "Bloco de Cogumelo Preto",
+    "block.mubble.blue_mushroom_block": "Bloco de Cogumelo Azul",
+    "block.mubble.light_blue_mushroom_block": "Bloco de Cogumelo Azul Claro",
+    "block.mubble.cyan_mushroom_block": "Bloco de Cogumelo Ciano",
+    "block.mubble.green_mushroom_block": "Bloco de Cogumelo Verde",
+    "block.mubble.lime_mushroom_block": "Bloco de Cogumelo Lima",
+    "block.mubble.yellow_mushroom_block": "Bloco de Cogumelo Amarelo",
+    "block.mubble.orange_mushroom_block": "Bloco de Cogumelo Laranja",
+    "block.mubble.pink_mushroom_block": "Bloco de Cogumelo Rosa",
+    "block.mubble.magenta_mushroom_block": "Bloco de Cogumelo Magenta",
+    "block.mubble.purple_mushroom_block": "Bloco de Cogumelo Roxo",
+    "block.mubble.white_mushroom_block": "Bloco de Cogumelo Branco",
+    "block.mubble.light_gray_mushroom_block": "Bloco de Cogumelo Cinza Claro",
+    "block.mubble.gray_mushroom_block": "Bloco de Cogumelo Cinza",
+    "block.mubble.black_mushroom_block": "Bloco de Cogumelo Preto",
 
-    "block.mubble.blue_tetris_block.mubble": "Bloco Azul de Tetris",
-    "block.mubble.light_blue_tetris_block.mubble": "Bloco Azul Claro de Tetris",
-    "block.mubble.cyan_tetris_block.mubble": "Bloco Ciano de Tetris",
-    "block.mubble.green_tetris_block.mubble": "Bloco Verde de Tetris",
-    "block.mubble.lime_tetris_block.mubble": "Bloco Lima de Tetris",
-    "block.mubble.yellow_tetris_block.mubble": "Bloco Amarelo de Tetris",
-    "block.mubble.orange_tetris_block.mubble": "Bloco Laranja de Tetris",
-    "block.mubble.red_tetris_block.mubble": "Bloco Vermelho de Tetris",
-    "block.mubble.pink_tetris_block.mubble": "Bloco Rosa de Tetris",
-    "block.mubble.magenta_tetris_block.mubble": "Bloco Magenta de Tetris",
-    "block.mubble.purple_tetris_block.mubble": "Bloco Roxo de Tetris",
-    "block.mubble.brown_tetris_block.mubble": "Bloco Marrom de Tetris",
-    "block.mubble.white_tetris_block.mubble": "Bloco Branco de Tetris",
-    "block.mubble.light_gray_tetris_block.mubble": "Light Gray Tetris block.mubble",
-    "block.mubble.gray_tetris_block.mubble": "Bloco Cinza de Tetris",
-    "block.mubble.black_tetris_block.mubble": "Bloco Preto de Tetris",
+    "block.mubble.blue_tetris_block": "Bloco Azul de Tetris",
+    "block.mubble.light_blue_tetris_block": "Bloco Azul Claro de Tetris",
+    "block.mubble.cyan_tetris_block": "Bloco Ciano de Tetris",
+    "block.mubble.green_tetris_block": "Bloco Verde de Tetris",
+    "block.mubble.lime_tetris_block": "Bloco Lima de Tetris",
+    "block.mubble.yellow_tetris_block": "Bloco Amarelo de Tetris",
+    "block.mubble.orange_tetris_block": "Bloco Laranja de Tetris",
+    "block.mubble.red_tetris_block": "Bloco Vermelho de Tetris",
+    "block.mubble.pink_tetris_block": "Bloco Rosa de Tetris",
+    "block.mubble.magenta_tetris_block": "Bloco Magenta de Tetris",
+    "block.mubble.purple_tetris_block": "Bloco Roxo de Tetris",
+    "block.mubble.brown_tetris_block": "Bloco Marrom de Tetris",
+    "block.mubble.white_tetris_block": "Bloco Branco de Tetris",
+    "block.mubble.light_gray_tetris_block": "Light Gray Tetris block",
+    "block.mubble.gray_tetris_block": "Bloco Cinza de Tetris",
+    "block.mubble.black_tetris_block": "Bloco Preto de Tetris",
     "block.mubble.tetris_glass": "Vidro de Tetris",
     "block.mubble.japanese_tetris_cushion": "Almofada Japonesa de Tetris",
     "block.mubble.rainbow_tetris_scaffolding": "Andaime Arco-Íris de Tetris",
@@ -132,14 +132,14 @@
     "block.mubble.gray_candy_cane_pillar": "Pilar de Bengala Doce Cinza",
     "block.mubble.black_candy_cane_pillar": "Pilar de Bengala Doce Preto",
 
-    "block.mubble.green_hill_grass_block.mubble": "Bloco de Grama de Green Hill",
+    "block.mubble.green_hill_grass_block": "Bloco de Grama de Green Hill",
     "block.mubble.green_hill_dirt": "Terra de Green Hill",
     "block.mubble.marble_zone_stone": "Pedra de Marble Zone",
     "block.mubble.yellow_studiopolis_clapper": "Claquete de Studiopolis Amarela",
     "block.mubble.blue_studiopolis_clapper": "Claquete de Studiopolis Azul",
     "block.mubble.spring": "Mola",
 
-    "block.mubble.scarlet_grass_block.mubble": "Bloco de Grama Escarlate",
+    "block.mubble.scarlet_grass_block": "Bloco de Grama Escarlate",
     "block.mubble.scarlet_grass": "Grama Escarlate",
     "block.mubble.scarlet_mushroom": "Cogumelo Escarlate",
     "block.mubble.scarlet_orchid": "Orquídea Escarlate",
@@ -163,10 +163,10 @@
     "block.mubble.point_puyo": "Puyo Ponto",
     "block.mubble.hard_puyo": "Puyo Rígido",
     "block.mubble.iron_puyo": "Puyo Ferro",
-    "block.mubble.puyo_block.mubble": "Bloco de Puyo",
+    "block.mubble.puyo_block": "Bloco de Puyo",
 
-    "block.mubble.rewind_block.mubble": "Bloco de Rewind",
-    "block.mubble.koretato_block.mubble": "Bloco Koretato",
+    "block.mubble.rewind_block": "Bloco de Rewind",
+    "block.mubble.koretato_block": "Bloco Koretato",
 
     //item.mubbleS
     "item.mubble.vanadium": "Vanadium",
@@ -236,7 +236,7 @@
     "item.mubble.baldi_head": "Cabeça de Baldi",
 
     "item.mubble.mayro_cap": "Boné de Mayro",
-    "item.mubble.noteblock.mubble_head": "Cabeça de Noteblock.mubble",
+    "item.mubble.noteblock.mubble_head": "Cabeça de Noteblock",
 
     //ENTITIES
     "entity.toad": "Toad",
