--- a/src/main/resources/assets/mubble/lang/en_gb.json
+++ b/src/main/resources/assets/mubble/lang/en_gb.json
@@ -5,7 +5,7 @@
     "item.mubbleGroup.mubble_costumes": "Mubble Costumes",
 
     //block.mubbleS
-    "block.mubble.vanadium_block.mubble": "block.mubble of Vanadium",
+    "block.mubble.vanadium_block": "block.mubble of Vanadium",
     "block.mubble.vanadium_ore": "Vanadium Ore",
     "block.mubble.red_bricks": "Red Bricks",
     "block.mubble.red_brick_stairs": "Red Brick Stairs",
@@ -21,14 +21,14 @@
     "block.mubble.carbonite_wall": "Carbonite Wall",
     "block.mubble.polished_carbonite": "Polished Carbonite",
     "block.mubble.polished_carbonite_stairs": "Polished Carbonite Stairs",
-    "block.mubble.footblock.mubble": "Footblock.mubble",
-    "block.mubble.white_cloud_block.mubble": "White Cloud block.mubble",
-    "block.mubble.light_gray_cloud_block.mubble": "Light Grey Cloud block.mubble",
-    "block.mubble.gray_cloud_block.mubble": "Grey Cloud block.mubble",
-    "block.mubble.black_cloud_block.mubble": "Black Cloud block.mubble",
+    "block.mubble.footblock": "Footblock",
+    "block.mubble.white_cloud_block": "White Cloud block",
+    "block.mubble.light_gray_cloud_block": "Light Grey Cloud block",
+    "block.mubble.gray_cloud_block": "Grey Cloud block",
+    "block.mubble.black_cloud_block": "Black Cloud block",
     //"block.mubble.tomato": "<newline>",
     //"block.mubble.salad": "<newline>",
-    //"block.mubble.cheese_block.mubble": "<newline>",
+    //"block.mubble.cheese_block": "<newline>",
     //"block.mubble.unstable_stone": "<newline>",
     //"block.mubble.ultimatum_portal": "<newline>",
     //"block.mubble.blue_balloon": "<newline>",
@@ -48,14 +48,14 @@
     //"block.mubble.gray_balloon": "<newline>",
     //"block.mubble.black_balloon": "<newline>",
 
-    "block.mubble.question_block.mubble": "? block.mubble",
-    "block.mubble.empty_block.mubble": "Empty block.mubble",
-    "block.mubble.rotating_block.mubble": "Rotating block.mubble",
-    "block.mubble.light_block.mubble": "Light block.mubble",
-    "block.mubble.brick_block.mubble": "Brick block.mubble",
-    "block.mubble.golden_brick_block.mubble": "Golden Brick block.mubble",
-    "block.mubble.note_block.mubble": "Note block.mubble",
-    "block.mubble.super_note_block.mubble": "Super Note block.mubble",
+    "block.mubble.question_block": "? block",
+    "block.mubble.empty_block": "Empty block",
+    "block.mubble.rotating_block": "Rotating block",
+    "block.mubble.light_block": "Light block",
+    "block.mubble.brick_block": "Brick block",
+    "block.mubble.golden_brick_block": "Golden Brick block",
+    "block.mubble.note_block": "Note block",
+    "block.mubble.super_note_block": "Super Note block",
     "block.mubble.fire_flower": "Fire Flower",
     "block.mubble.ice_flower": "Ice Flower",
     "block.mubble.boomerang_flower": "Boomerang Flower",
@@ -75,37 +75,37 @@
     "block.mubble.light_gray_mushroom": "Light Grey Mushroom",
     "block.mubble.gray_mushroom": "Grey Mushroom",
     "block.mubble.black_mushroom": "Black Mushroom",
-    "block.mubble.blue_mushroom_block.mubble": "Blue Mushroom block.mubble",
-    "block.mubble.light_blue_mushroom_block.mubble": "Light Blue Mushroom block.mubble",
-    "block.mubble.cyan_mushroom_block.mubble": "Cyan Mushroom block.mubble",
-    "block.mubble.green_mushroom_block.mubble": "Green Mushroom block.mubble",
-    "block.mubble.lime_mushroom_block.mubble": "Lime Mushroom block.mubble",
-    "block.mubble.yellow_mushroom_block.mubble": "Yellow Mushroom block.mubble",
-    "block.mubble.orange_mushroom_block.mubble": "Orange Mushroom block.mubble",
-    "block.mubble.pink_mushroom_block.mubble": "Pink Mushroom block.mubble",
-    "block.mubble.magenta_mushroom_block.mubble": "Magenta Mushroom block.mubble",
-    "block.mubble.purple_mushroom_block.mubble": "Purple Mushroom block.mubble",
-    "block.mubble.white_mushroom_block.mubble": "White Mushroom block.mubble",
-    "block.mubble.light_gray_mushroom_block.mubble": "Light Grey Mushroom block.mubble",
-    "block.mubble.gray_mushroom_block.mubble": "Grey Mushroom block.mubble",
-    "block.mubble.black_mushroom_block.mubble": "Black Mushroom block.mubble",
+    "block.mubble.blue_mushroom_block": "Blue Mushroom block",
+    "block.mubble.light_blue_mushroom_block": "Light Blue Mushroom block",
+    "block.mubble.cyan_mushroom_block": "Cyan Mushroom block",
+    "block.mubble.green_mushroom_block": "Green Mushroom block",
+    "block.mubble.lime_mushroom_block": "Lime Mushroom block",
+    "block.mubble.yellow_mushroom_block": "Yellow Mushroom block",
+    "block.mubble.orange_mushroom_block": "Orange Mushroom block",
+    "block.mubble.pink_mushroom_block": "Pink Mushroom block",
+    "block.mubble.magenta_mushroom_block": "Magenta Mushroom block",
+    "block.mubble.purple_mushroom_block": "Purple Mushroom block",
+    "block.mubble.white_mushroom_block": "White Mushroom block",
+    "block.mubble.light_gray_mushroom_block": "Light Grey Mushroom block",
+    "block.mubble.gray_mushroom_block": "Grey Mushroom block",
+    "block.mubble.black_mushroom_block": "Black Mushroom block",
 
-    //"block.mubble.blue_tetris_block.mubble": "<newline>",
-    //"block.mubble.light_blue_tetris_block.mubble": "<newline>",
-    //"block.mubble.cyan_tetris_block.mubble": "<newline>",
-    //"block.mubble.green_tetris_block.mubble": "<newline>",
-    //"block.mubble.lime_tetris_block.mubble": "<newline>",
-    //"block.mubble.yellow_tetris_block.mubble": "<newline>",
-    //"block.mubble.orange_tetris_block.mubble": "<newline>",
-    //"block.mubble.red_tetris_block.mubble": "<newline>",
-    //"block.mubble.pink_tetris_block.mubble": "<newline>",
-    //"block.mubble.magenta_tetris_block.mubble": "<newline>",
-    //"block.mubble.purple_tetris_block.mubble": "<newline>",
-    //"block.mubble.brown_tetris_block.mubble": "<newline>",
-    //"block.mubble.white_tetris_block.mubble": "<newline>",
-    //"block.mubble.light_gray_tetris_block.mubble": "<newline>",
-    //"block.mubble.gray_tetris_block.mubble": "<newline>",
-    //"block.mubble.black_tetris_block.mubble": "<newline>",
+    //"block.mubble.blue_tetris_block": "<newline>",
+    //"block.mubble.light_blue_tetris_block": "<newline>",
+    //"block.mubble.cyan_tetris_block": "<newline>",
+    //"block.mubble.green_tetris_block": "<newline>",
+    //"block.mubble.lime_tetris_block": "<newline>",
+    //"block.mubble.yellow_tetris_block": "<newline>",
+    //"block.mubble.orange_tetris_block": "<newline>",
+    //"block.mubble.red_tetris_block": "<newline>",
+    //"block.mubble.pink_tetris_block": "<newline>",
+    //"block.mubble.magenta_tetris_block": "<newline>",
+    //"block.mubble.purple_tetris_block": "<newline>",
+    //"block.mubble.brown_tetris_block": "<newline>",
+    //"block.mubble.white_tetris_block": "<newline>",
+    //"block.mubble.light_gray_tetris_block": "<newline>",
+    //"block.mubble.gray_tetris_block": "<newline>",
+    //"block.mubble.black_tetris_block": "<newline>",
     "block.mubble.tetris_glass": "Tetris Glass",
     "block.mubble.japanese_tetris_cushion": "Japanese Tetris Cushion",
     "block.mubble.rainbow_tetris_scaffolding": "Rainbow Tetris Scaffolding",
@@ -132,14 +132,14 @@
     "block.mubble.gray_candy_cane_pillar": "Grey Candy Cane Pillar",
     "block.mubble.black_candy_cane_pillar": "Black Candy Cane Pillar",
 
-    //"block.mubble.green_hill_grass_block.mubble": "<newline>",
+    //"block.mubble.green_hill_grass_block": "<newline>",
     //"block.mubble.green_hill_dirt": "<newline>",
     //"block.mubble.marble_zone_stone": "<newline>",
     //"block.mubble.yellow_studiopolis_clapper": "<newline>",
     //"block.mubble.blue_studiopolis_clapper": "<newline>",
     //"block.mubble.spring": "<newline>",
 
-    //"block.mubble.scarlet_grass_block.mubble": "<newline>",
+    //"block.mubble.scarlet_grass_block": "<newline>",
     //"block.mubble.scarlet_grass": "<newline>",
     "block.mubble.scarlet_mushroom": "Scarlet Mushroom",
     //"block.mubble.scarlet_orchid": "<newline>",
@@ -163,10 +163,10 @@
     //"block.mubble.point_puyo": "<newline>",
     //"block.mubble.hard_puyo": "<newline>",
     //"block.mubble.iron_puyo": "<newline>",
-    //"block.mubble.puyo_block.mubble": "<newline>",
+    //"block.mubble.puyo_block": "<newline>",
 
-    //"block.mubble.rewind_block.mubble": "<newline>",
-    "block.mubble.koretato_block.mubble": "Koretato block.mubble",
+    //"block.mubble.rewind_block": "<newline>",
+    "block.mubble.koretato_block": "Koretato block",
 
     //item.mubbleS
     "item.mubble.vanadium": "Vanadium",
@@ -275,7 +275,7 @@
     "advancements.mubble.get_vanadium.title": "Vanadiums!",
     "advancements.mubble.get_vanadium.description": "Acquire vanadiums",
     "advancements.mubble.get_tetris_block.mubble.title": "It's All Connected",
-    "advancements.mubble.get_tetris_block.mubble.description": "Get your hand on a Tetris block.mubble",
+    "advancements.mubble.get_tetris_block.mubble.description": "Get your hand on a Tetris block",
 
     //COMMANDS
     "commands.motion.usage": "/motion <entity> <set|add> [dX] [dY] [dZ]",
