--- a/src/main/resources/assets/mubble/lang/en_ud.json
+++ b/src/main/resources/assets/mubble/lang/en_ud.json
@@ -5,7 +5,7 @@
     "item.mubbleGroup.mubble_costumes": "sǝɯnʇsoƆ ǝlqqnW",
 
     //block.mubbleS
-    "block.mubble.vanadium_block.mubble": "ɯnᴉpɐuɐΛ ɟo ʞɔolᗺ",
+    "block.mubble.vanadium_block": "ɯnᴉpɐuɐΛ ɟo ʞɔolᗺ",
     "block.mubble.vanadium_ore": "ǝɹO ɯnᴉpɐuɐΛ",
     "block.mubble.red_bricks": "sʞɔᴉɹᗺ pǝᴚ",
     //"block.mubble.red_brick_stairs": "<newline>",
@@ -21,14 +21,14 @@
     //"block.mubble.carbonite_wall": "<newline>",
     "block.mubble.polished_carbonite": "ǝʇᴉuoqɹɐƆ pǝɥsᴉloԀ",
     //"block.mubble.polished_carbonite_stairs": "<newline>",
-    "block.mubble.footblock.mubble": "ʞɔolqʇooℲ",
-    "block.mubble.white_cloud_block.mubble": "ʞɔolq pnolƆ ǝʇᴉɥM",
-    //"block.mubble.light_gray_cloud_block.mubble": "<newline>",
-    //"block.mubble.gray_cloud_block.mubble": "<newline>",
-    //"block.mubble.black_cloud_block.mubble": "<newline>",
+    "block.mubble.footblock": "ʞɔolqʇooℲ",
+    "block.mubble.white_cloud_block": "ʞɔolq pnolƆ ǝʇᴉɥM",
+    //"block.mubble.light_gray_cloud_block": "<newline>",
+    //"block.mubble.gray_cloud_block": "<newline>",
+    //"block.mubble.black_cloud_block": "<newline>",
     //"block.mubble.tomato": "<newline>",
     //"block.mubble.salad": "<newline>",
-    //"block.mubble.cheese_block.mubble": "<newline>",
+    //"block.mubble.cheese_block": "<newline>",
     //"block.mubble.unstable_stone": "<newline>",
     //"block.mubble.ultimatum_portal": "<newline>",
     //"block.mubble.blue_balloon": "<newline>",
@@ -48,14 +48,14 @@
     //"block.mubble.gray_balloon": "<newline>",
     //"block.mubble.black_balloon": "<newline>",
 
-    "block.mubble.question_block.mubble": "ʞɔolᗺ ¿",
-    "block.mubble.empty_block.mubble": "ʞɔolᗺ ʎʇdɯƎ",
-    "block.mubble.rotating_block.mubble": "ʞɔolᗺ ƃuᴉʇɐʇoᴚ",
-    "block.mubble.light_block.mubble": "ʞɔolᗺ ʇɥƃᴉ˥",
-    "block.mubble.brick_block.mubble": "ʞɔolᗺ ʞɔᴉɹᗺ",
-    "block.mubble.golden_brick_block.mubble": "ʞɔolᗺ ʞɔᴉɹᗺ uǝploפ",
-    "block.mubble.note_block.mubble": "ʞɔolᗺ ǝʇoN",
-    "block.mubble.super_note_block.mubble": "ʞɔolᗺ ǝʇoN ɹǝdnS",
+    "block.mubble.question_block": "ʞɔolᗺ ¿",
+    "block.mubble.empty_block": "ʞɔolᗺ ʎʇdɯƎ",
+    "block.mubble.rotating_block": "ʞɔolᗺ ƃuᴉʇɐʇoᴚ",
+    "block.mubble.light_block": "ʞɔolᗺ ʇɥƃᴉ˥",
+    "block.mubble.brick_block": "ʞɔolᗺ ʞɔᴉɹᗺ",
+    "block.mubble.golden_brick_block": "ʞɔolᗺ ʞɔᴉɹᗺ uǝploפ",
+    "block.mubble.note_block": "ʞɔolᗺ ǝʇoN",
+    "block.mubble.super_note_block": "ʞɔolᗺ ǝʇoN ɹǝdnS",
     "block.mubble.fire_flower": "ɹǝʍolℲ ǝɹᴉℲ",
     "block.mubble.ice_flower": "ɹǝʍolℲ ǝɔI",
     "block.mubble.boomerang_flower": "ɹǝʍolℲ ƃuɐɹǝɯooᗺ",
@@ -75,37 +75,37 @@
     //"block.mubble.light_gray_mushroom": "<newline>",
     //"block.mubble.gray_mushroom": "<newline>",
     //"block.mubble.black_mushroom": "<newline>",
-    //"block.mubble.blue_mushroom_block.mubble": "<newline>",
-    //"block.mubble.light_blue_mushroom_block.mubble": "<newline>",
-    //"block.mubble.cyan_mushroom_block.mubble": "<newline>",
-    //"block.mubble.green_mushroom_block.mubble": "<newline>",
-    //"block.mubble.lime_mushroom_block.mubble": "<newline>",
-    //"block.mubble.yellow_mushroom_block.mubble": "<newline>",
-    //"block.mubble.orange_mushroom_block.mubble": "<newline>",
-    //"block.mubble.pink_mushroom_block.mubble": "<newline>",
-    //"block.mubble.magenta_mushroom_block.mubble": "<newline>",
-    //"block.mubble.purple_mushroom_block.mubble": "<newline>",
-    //"block.mubble.white_mushroom_block.mubble": "<newline>",
-    //"block.mubble.light_gray_mushroom_block.mubble": "<newline>",
-    //"block.mubble.gray_mushroom_block.mubble": "<newline>",
-    //"block.mubble.black_mushroom_block.mubble": "<newline>",
+    //"block.mubble.blue_mushroom_block": "<newline>",
+    //"block.mubble.light_blue_mushroom_block": "<newline>",
+    //"block.mubble.cyan_mushroom_block": "<newline>",
+    //"block.mubble.green_mushroom_block": "<newline>",
+    //"block.mubble.lime_mushroom_block": "<newline>",
+    //"block.mubble.yellow_mushroom_block": "<newline>",
+    //"block.mubble.orange_mushroom_block": "<newline>",
+    //"block.mubble.pink_mushroom_block": "<newline>",
+    //"block.mubble.magenta_mushroom_block": "<newline>",
+    //"block.mubble.purple_mushroom_block": "<newline>",
+    //"block.mubble.white_mushroom_block": "<newline>",
+    //"block.mubble.light_gray_mushroom_block": "<newline>",
+    //"block.mubble.gray_mushroom_block": "<newline>",
+    //"block.mubble.black_mushroom_block": "<newline>",
 
-    //"block.mubble.blue_tetris_block.mubble": "<newline>",
-    //"block.mubble.light_blue_tetris_block.mubble": "<newline>",
-    //"block.mubble.cyan_tetris_block.mubble": "<newline>",
-    //"block.mubble.green_tetris_block.mubble": "<newline>",
-    //"block.mubble.lime_tetris_block.mubble": "<newline>",
-    //"block.mubble.yellow_tetris_block.mubble": "<newline>",
-    //"block.mubble.orange_tetris_block.mubble": "<newline>",
-    //"block.mubble.red_tetris_block.mubble": "<newline>",
-    //"block.mubble.pink_tetris_block.mubble": "<newline>",
-    //"block.mubble.magenta_tetris_block.mubble": "<newline>",
-    //"block.mubble.purple_tetris_block.mubble": "<newline>",
-    //"block.mubble.brown_tetris_block.mubble": "<newline>",
-    //"block.mubble.white_tetris_block.mubble": "<newline>",
-    //"block.mubble.light_gray_tetris_block.mubble": "<newline>",
-    //"block.mubble.gray_tetris_block.mubble": "<newline>",
-    //"block.mubble.black_tetris_block.mubble": "<newline>",
+    //"block.mubble.blue_tetris_block": "<newline>",
+    //"block.mubble.light_blue_tetris_block": "<newline>",
+    //"block.mubble.cyan_tetris_block": "<newline>",
+    //"block.mubble.green_tetris_block": "<newline>",
+    //"block.mubble.lime_tetris_block": "<newline>",
+    //"block.mubble.yellow_tetris_block": "<newline>",
+    //"block.mubble.orange_tetris_block": "<newline>",
+    //"block.mubble.red_tetris_block": "<newline>",
+    //"block.mubble.pink_tetris_block": "<newline>",
+    //"block.mubble.magenta_tetris_block": "<newline>",
+    //"block.mubble.purple_tetris_block": "<newline>",
+    //"block.mubble.brown_tetris_block": "<newline>",
+    //"block.mubble.white_tetris_block": "<newline>",
+    //"block.mubble.light_gray_tetris_block": "<newline>",
+    //"block.mubble.gray_tetris_block": "<newline>",
+    //"block.mubble.black_tetris_block": "<newline>",
     "block.mubble.tetris_glass": "ssɐlפ sᴉɹʇǝ┴",
     "block.mubble.japanese_tetris_cushion": "uoᴉɥsnƆ sᴉɹʇǝ┴ ǝsǝuɐdɐſ",
     "block.mubble.rainbow_tetris_scaffolding": "ƃuᴉploɟɟɐɔS sᴉɹʇǝ┴ ʍoquᴉɐɹ",
@@ -132,14 +132,14 @@
     //"block.mubble.gray_candy_cane_pillar": "<newline>",
     //"block.mubble.black_candy_cane_pillar": "<newline>",
 
-    //"block.mubble.green_hill_grass_block.mubble": "<newline>",
+    //"block.mubble.green_hill_grass_block": "<newline>",
     //"block.mubble.green_hill_dirt": "<newline>",
     //"block.mubble.marble_zone_stone": "<newline>",
     //"block.mubble.yellow_studiopolis_clapper": "<newline>",
     //"block.mubble.blue_studiopolis_clapper": "<newline>",
     //"block.mubble.spring": "<newline>",
 
-    //"block.mubble.scarlet_grass_block.mubble": "<newline>",
+    //"block.mubble.scarlet_grass_block": "<newline>",
     //"block.mubble.scarlet_grass": "<newline>",
     //"block.mubble.scarlet_mushroom": "<newline>",
     //"block.mubble.scarlet_orchid": "<newline>",
@@ -163,10 +163,10 @@
     //"block.mubble.point_puyo": "<newline>",
     //"block.mubble.hard_puyo": "<newline>",
     //"block.mubble.iron_puyo": "<newline>",
-    //"block.mubble.puyo_block.mubble": "<newline>",
+    //"block.mubble.puyo_block": "<newline>",
 
-    //"block.mubble.rewind_block.mubble": "<newline>",
-    "block.mubble.koretato_block.mubble": "ʞɔolq oʇɐʇǝɹoʞ",
+    //"block.mubble.rewind_block": "<newline>",
+    "block.mubble.koretato_block": "ʞɔolq oʇɐʇǝɹoʞ",
 
     //item.mubbleS
     "item.mubble.vanadium": "ɯnᴉpɐuɐΛ",
