--- a/src/main/resources/assets/mubble/lang/zh_tw.json
+++ b/src/main/resources/assets/mubble/lang/zh_tw.json
@@ -5,7 +5,7 @@
     "item.mubbleGroup.mubble_costumes": "任天堂領域時裝",
 
     //block.mubbleS
-    "block.mubble.vanadium_block.mubble": "釩塊",
+    "block.mubble.vanadium_block": "釩塊",
     "block.mubble.vanadium_ore": "釩礦石",
     "block.mubble.red_bricks": "紅色磚塊",
     //"block.mubble.red_brick_stairs": "<newline>",
@@ -21,14 +21,14 @@
     //"block.mubble.carbonite_wall": "<newline>",
     "block.mubble.polished_carbonite": "磨製碳岩",
     //"block.mubble.polished_carbonite_stairs": "<newline>",
-    "block.mubble.footblock.mubble": "足球塊",
-    //"block.mubble.white_cloud_block.mubble": "<newline>",
-    //"block.mubble.light_gray_cloud_block.mubble": "<newline>",
-    //"block.mubble.gray_cloud_block.mubble": "<newline>",
-    //"block.mubble.black_cloud_block.mubble": "<newline>",
+    "block.mubble.footblock": "足球塊",
+    //"block.mubble.white_cloud_block": "<newline>",
+    //"block.mubble.light_gray_cloud_block": "<newline>",
+    //"block.mubble.gray_cloud_block": "<newline>",
+    //"block.mubble.black_cloud_block": "<newline>",
     //"block.mubble.tomato": "<newline>",
     //"block.mubble.salad": "<newline>",
-    //"block.mubble.cheese_block.mubble": "<newline>",
+    //"block.mubble.cheese_block": "<newline>",
     //"block.mubble.unstable_stone": "<newline>",
     //"block.mubble.ultimatum_portal": "<newline>",
     //"block.mubble.blue_balloon": "<newline>",
@@ -48,14 +48,14 @@
     //"block.mubble.gray_balloon": "<newline>",
     //"block.mubble.black_balloon": "<newline>",
 
-    "block.mubble.question_block.mubble": "問號塊",
-    "block.mubble.empty_block.mubble": "鋼塊",
-    "block.mubble.rotating_block.mubble": "旋轉塊",
-    "block.mubble.light_block.mubble": "發光塊",
-    "block.mubble.brick_block.mubble": "磚塊",
-    "block.mubble.golden_brick_block.mubble": "金色磚塊",
-    "block.mubble.note_block.mubble": "音符塊",
-    "block.mubble.super_note_block.mubble": "超級音符塊",
+    "block.mubble.question_block": "問號塊",
+    "block.mubble.empty_block": "鋼塊",
+    "block.mubble.rotating_block": "旋轉塊",
+    "block.mubble.light_block": "發光塊",
+    "block.mubble.brick_block": "磚塊",
+    "block.mubble.golden_brick_block": "金色磚塊",
+    "block.mubble.note_block": "音符塊",
+    "block.mubble.super_note_block": "超級音符塊",
     "block.mubble.fire_flower": "火花",
     "block.mubble.ice_flower": "冰花",
     "block.mubble.boomerang_flower": "迴旋鏢花",
@@ -75,37 +75,37 @@
     //"block.mubble.light_gray_mushroom": "<newline>",
     //"block.mubble.gray_mushroom": "<newline>",
     //"block.mubble.black_mushroom": "<newline>",
-    "block.mubble.blue_mushroom_block.mubble": "藍色蘑菇",
-    //"block.mubble.light_blue_mushroom_block.mubble": "<newline>",
-    //"block.mubble.cyan_mushroom_block.mubble": "<newline>",
-    "block.mubble.green_mushroom_block.mubble": "綠色蘑菇方塊",
-    //"block.mubble.lime_mushroom_block.mubble": "<newline>",
-    "block.mubble.yellow_mushroom_block.mubble": "黃色蘑菇方塊",
-    //"block.mubble.orange_mushroom_block.mubble": "<newline>",
-    //"block.mubble.pink_mushroom_block.mubble": "<newline>",
-    //"block.mubble.magenta_mushroom_block.mubble": "<newline>",
-    "block.mubble.purple_mushroom_block.mubble": "紫色蘑菇方塊",
-    //"block.mubble.white_mushroom_block.mubble": "<newline>",
-    //"block.mubble.light_gray_mushroom_block.mubble": "<newline>",
-    //"block.mubble.gray_mushroom_block.mubble": "<newline>",
-    //"block.mubble.black_mushroom_block.mubble": "<newline>",
+    "block.mubble.blue_mushroom_block": "藍色蘑菇",
+    //"block.mubble.light_blue_mushroom_block": "<newline>",
+    //"block.mubble.cyan_mushroom_block": "<newline>",
+    "block.mubble.green_mushroom_block": "綠色蘑菇方塊",
+    //"block.mubble.lime_mushroom_block": "<newline>",
+    "block.mubble.yellow_mushroom_block": "黃色蘑菇方塊",
+    //"block.mubble.orange_mushroom_block": "<newline>",
+    //"block.mubble.pink_mushroom_block": "<newline>",
+    //"block.mubble.magenta_mushroom_block": "<newline>",
+    "block.mubble.purple_mushroom_block": "紫色蘑菇方塊",
+    //"block.mubble.white_mushroom_block": "<newline>",
+    //"block.mubble.light_gray_mushroom_block": "<newline>",
+    //"block.mubble.gray_mushroom_block": "<newline>",
+    //"block.mubble.black_mushroom_block": "<newline>",
 
-    //"block.mubble.blue_tetris_block.mubble": "<newline>",
-    //"block.mubble.light_blue_tetris_block.mubble": "<newline>",
-    //"block.mubble.cyan_tetris_block.mubble": "<newline>",
-    //"block.mubble.green_tetris_block.mubble": "<newline>",
-    //"block.mubble.lime_tetris_block.mubble": "<newline>",
-    //"block.mubble.yellow_tetris_block.mubble": "<newline>",
-    //"block.mubble.orange_tetris_block.mubble": "<newline>",
-    //"block.mubble.red_tetris_block.mubble": "<newline>",
-    //"block.mubble.pink_tetris_block.mubble": "<newline>",
-    //"block.mubble.magenta_tetris_block.mubble": "<newline>",
-    //"block.mubble.purple_tetris_block.mubble": "<newline>",
-    //"block.mubble.brown_tetris_block.mubble": "<newline>",
-    //"block.mubble.white_tetris_block.mubble": "<newline>",
-    //"block.mubble.light_gray_tetris_block.mubble": "<newline>",
-    //"block.mubble.gray_tetris_block.mubble": "<newline>",
-    //"block.mubble.black_tetris_block.mubble": "<newline>",
+    //"block.mubble.blue_tetris_block": "<newline>",
+    //"block.mubble.light_blue_tetris_block": "<newline>",
+    //"block.mubble.cyan_tetris_block": "<newline>",
+    //"block.mubble.green_tetris_block": "<newline>",
+    //"block.mubble.lime_tetris_block": "<newline>",
+    //"block.mubble.yellow_tetris_block": "<newline>",
+    //"block.mubble.orange_tetris_block": "<newline>",
+    //"block.mubble.red_tetris_block": "<newline>",
+    //"block.mubble.pink_tetris_block": "<newline>",
+    //"block.mubble.magenta_tetris_block": "<newline>",
+    //"block.mubble.purple_tetris_block": "<newline>",
+    //"block.mubble.brown_tetris_block": "<newline>",
+    //"block.mubble.white_tetris_block": "<newline>",
+    //"block.mubble.light_gray_tetris_block": "<newline>",
+    //"block.mubble.gray_tetris_block": "<newline>",
+    //"block.mubble.black_tetris_block": "<newline>",
     "block.mubble.tetris_glass": "俄羅斯方塊玻璃",
     "block.mubble.japanese_tetris_cushion": "日式俄羅斯方塊坐墊",
     "block.mubble.rainbow_tetris_scaffolding": "彩虹俄羅斯方塊腳手架",
@@ -132,14 +132,14 @@
     //"block.mubble.gray_candy_cane_pillar": "<newline>",
     //"block.mubble.black_candy_cane_pillar": "<newline>",
 
-    //"block.mubble.green_hill_grass_block.mubble": "<newline>",
+    //"block.mubble.green_hill_grass_block": "<newline>",
     //"block.mubble.green_hill_dirt": "<newline>",
     //"block.mubble.marble_zone_stone": "<newline>",
     //"block.mubble.yellow_studiopolis_clapper": "<newline>",
     //"block.mubble.blue_studiopolis_clapper": "<newline>",
     //"block.mubble.spring": "<newline>",
 
-    //"block.mubble.scarlet_grass_block.mubble": "<newline>",
+    //"block.mubble.scarlet_grass_block": "<newline>",
     //"block.mubble.scarlet_grass": "<newline>",
     //"block.mubble.scarlet_mushroom": "<newline>",
     //"block.mubble.scarlet_orchid": "<newline>",
@@ -163,10 +163,10 @@
     //"block.mubble.point_puyo": "<newline>",
     //"block.mubble.hard_puyo": "<newline>",
     //"block.mubble.iron_puyo": "<newline>",
-    //"block.mubble.puyo_block.mubble": "<newline>",
+    //"block.mubble.puyo_block": "<newline>",
 
-    //"block.mubble.rewind_block.mubble": "<newline>",
-    "block.mubble.koretato_block.mubble": "Koretato塊",
+    //"block.mubble.rewind_block": "<newline>",
+    "block.mubble.koretato_block": "Koretato塊",
 
     //item.mubbleS
     "item.mubble.vanadium": "釩",
